--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/CustomBattle/std_custom_battle_scenes_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/CustomBattle/std_custom_battle_scenes_xml_by.xml
@@ -71,7 +71,7 @@
     <string id="DDzuJuFC" text="Узьбярэжжа Нефрытавага Мора (Пустэльня)" />
     <string id="Dga5nleS" text="Даліна Сэйматы (Раўніна)" />
     <string id="diY4gxkG" text="Верэксанд" />
-    <string id="eEqUBFb3" text="Эпікратыя" />
+    <string id="eEqUBFb3" text="Эпікратэя" />
     <string id="eeSLHoF6" text="Замак Льлянок Хэн" />
     <string id="EF64kAD9" text="Фэнан Трын" />
     <string id="F4SBmZ83" text="Эціфурд" />
@@ -223,7 +223,7 @@
     <string id="vN32HHek" text="Хабая" />
     <string id="vXqCDtR6" text="Ватэя" />
     <string id="VZJF1eXu" text="Замак Такор" />
-    <string id="w7ImuzEs" text="Прэйвенд" />
+    <string id="w7ImuzEs" text="Правенд" />
     <string id="wj01G6Mw" text="Вэсін" />
     <string id="wKYM4OQY" text="Плато Нахр Аль-Кальсы (Стэп)" />
     <string id="wL4VPMJY" text="Мост Дамара (Пустэльня)" />
