--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_crafting_pieces_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_crafting_pieces_xml_by.xml
@@ -106,7 +106,7 @@
     <string id="9qaanOpL" text="Просты Паўночны Эфес" />
     <string id="9T2KA9sk" text="Залатая Злучаная Ўпрыгожаная Сталёвая Ручка" />
     <string id="9Y1zUaE7" text="Імперскі Круглы Эфес" />
-    <string id="A06HEqvF" text="Зьвязанае Крыло Кап'я" />
+    <string id="A06HEqvF" text="Зацягнутае Крыло Кап'я" />
     <string id="a0erBuF1" text="Крукаватае Наверша Сякеры" />
     <string id="A1m12E8N" text="Доўгая Ўзброеная Гарда Кінжала" />
     <string id="a4qSDsmb" text="Імперская Залатая Выдатная Гарда Меча" />
@@ -162,7 +162,7 @@
     <string id="bGfs8gNv" text="Паўночнае Лязо Палаша" />
     <string id="bjQ8J71a" text="Доўгае Наверша Глефа" />
     <string id="BKHKQ15N" text="Туркусавы Эфес" />
-    <string id="bki9u9FW" text="Узброенае Лязо Меча з Залатым Круглым Водціскам" />
+    <string id="bki9u9FW" text="Збройнае Лязо Меча з Залатым Круглым Водціскам" />
     <string id="BL96pnde" text="Грубая Скураная Аднаручная Ручка Сікача" />
     <string id="blaVlvm2" text="Упрыгожанае Кароткае Лязо Вайсковага Меча" />
     <string id="bM8kSewD" text="Рабрыстая Паўночная Гарда" />
@@ -466,8 +466,8 @@
     <string id="nZ5e678J" text="Просты Эфес-Кола" />
     <string id="NzjHzhwC" text="Дыяментавая Гарда з Выступам" />
     <string id="o2kFafbu" text="Усходняе Сталёвае Наверша Булавы" />
-    <string id="O2kPKeuK" text="Узброенае Лязо Меча з Залатым Гравераваньнем" />
-    <string id="OBeOZ27b" text="Наверша Глефа" />
+    <string id="O2kPKeuK" text="Збройнае Лязо Меча з Залатым Гравераваньнем" />
+    <string id="OBeOZ27b" text="Наверша Глефы" />
     <string id="oeELDZRo" text="Гарызантальны Прамавугольны Сьцяг" />
     <string id="oGPHQt1J" text="Высокая Двухручная Ручка Сікача" />
     <string id="OHHpwD0F" text="Прамое Лязо Шаблі" />
@@ -604,7 +604,7 @@
     <string id="Uhc0KIdz" text="Хваёвы Посах Кап'я" />
     <string id="uIciSK8t" text="Упрыгожаная Круглая Паўднёвая Шляхетная Ручка" />
     <string id="uKu7rTrW" text="Шчыльная Загорнутая Вузкая Аднаручная Ручка" />
-    <string id="UKWwPPkx" text="Узброенае Лязо Меча з Залатым Водціскам Пялёсткаў" />
+    <string id="UKWwPPkx" text="Збройнае Лязо Меча з Залатым Водціскам Пялёсткаў" />
     <string id="ukYW8FVm" text="Цыбульны Эфес Шаблі" />
     <string id="uLqEw8LB" text="Шыпаваная Імперская Доўгая Ручка" />
     <string id="uQsJQLJH" text="Кароткая Паўночная Шкураная Ручка" />
@@ -615,7 +615,7 @@
     <string id="uwG8iwBc" text="Доўгае Раўніннае Кап'ё" />
     <string id="V0khEGns" text="Плоскі Эфес" />
     <string id="v22onVb2" text="Трохі Рабрыстае Лязо Фліссы" />
-    <string id="V3JMuFEg" text="Зьвязанае Дзяржаньне Булавы" />
+    <string id="V3JMuFEg" text="Зацягнутае Дзяржаньне Булавы" />
     <string id="V6YQykoc" text="Завостраная Гарда Кінжала з Аховай" />
     <string id="V9Kbq6vj" text="Тупая Палоска Для Практыкі" />
     <string id="VbpiYB68" text="Упрыгожанае Шырокае Кароткае Лязо з Долам" />
