--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_module_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_module_strings_xml_by.xml
@@ -107,7 +107,7 @@
     <string id="3o6FDRsq" text="Захопленыя Гарады" />
     <string id="3PzgpFGq" text="Нейтральн." />
     <string id="3qFPyJtB" text="Чакае ў {SETTLEMENT_NAME}." />
-    <string id="3sRdGQou" text="Пакінуць" />
+    <string id="3sRdGQou" text="Сысьці" />
     <string id="3sWa2Hmt" text="мой сын {REFERING_HERO.LINK}" />
     <string id="3syV6ymi" text="тупой" />
     <string id="3tJq5QyQ" text="{HEALTHY_NUM}+{WOUNDED_NUM}р" />
@@ -1131,7 +1131,7 @@
     <string id="mbS0DkUo" text="Рабаваньне" />
     <string id="mbT1uNPa" text="Кінжал" />
     <string id="Mc8ojOGn" text="Дым" />
-    <string id="MciIqod6" text="Наезд Дзідаю" />
+    <string id="MciIqod6" text="Наезд Дзідай" />
     <string id="mDbaNQay" text="Рухайцеся наперад і паспрабуйце ударыць свайго апанента!" />
     <string id="mds0myr4" text="{HERO.NAME} {?PLAYER.GENDER}страціла{?}страціў{\?} {TRAIT_NAME} сваю асаблівасьць." />
     <string id="MeQmoYb4" text="Вашыя адносіны занадта малыя, каб набыць гэтага ваяра. {newline}Вашыя адносіны {REL1}. Патрэбныя {REL2}." />
