--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
@@ -48,14 +48,14 @@
     <string id="3c3uqW3d" text="{.Muzcynski}Баттанійскі Кароткі Меч" />
     <string id="3DV3GoHb" text="{.Muzcynski}Завостраны Скалкэп з Кальчугай" />
     <string id="3eb3ZyiU" text="{.Muzcynski}Вельмі Добры Лук" />
-    <string id="3iq3rOh8" text="{.Muzcynski}Капалін над Узброеным Коіфам" />
+    <string id="3iq3rOh8" text="{.Muzcynski}Капалін над Збройным Коіфам" />
     <string id="3lauB1HH" text="{.Zanocy}Бронзавая Ламелярная Камізэлька над Гамбезонам" />
     <string id="3qF14kaR" text="{.Muzcynski}Імперскі Палдрон-Накідка" />
     <string id="3UxfT9Bu" text="{.Zanocy}Загорнутая Скураная Шапка" />
     <string id="3WdXljdt" text="{.Muzcynski}Дужы Нахасэн" />
     <string id="3Wzhxkn1" text="{.Muzcynski}Збан" />
     <string id="3XSuOAYT" text="{.Muzcynski}Шокавы Доўгі Лук" />
-    <string id="3Z91Nxbf" text="{.Muzcynski}Шпангенхельм са Скураю" />
+    <string id="3Z91Nxbf" text="{.Muzcynski}Шпангенхэльм са Скураю" />
     <string id="42KNket2" text="{.Mnozny}Горныя Боты" />
     <string id="46orXtt0" text="{.Nijaki}Лясное Адзеньне" />
     <string id="4a99jSHC" text="{.Mnozny}Стэпавыя Скураныя Наплечнікі" />
@@ -75,7 +75,7 @@
     <string id="4wdgiTta" text="{.Muzcynski}Серп" />
     <string id="4xUR2kAj" text="{.Zanocy}Імперская Цяжкая Булава" />
     <string id="4YxbZlbi" text="{.Mnozny}Загорнутыя Туфлі" />
-    <string id="51EcVnzd" text="{.Muzcynski}Шалом з Забралам над Шнураваным Коіфам" />
+    <string id="51EcVnzd" text="{.Muzcynski}Шалом з Заслонай над Шнураваным Коіфам" />
     <string id="564PHXk3" text="{.Zanocy}Упрыгожаная Скураная Запрэжка" />
     <string id="5bEHZ2z1" text="{.Muzcynski}Імперскі Шалом з Абаронай Вачэй" />
     <string id="5c4cHL9Z" text="{.Zanocy}Хузаіцкая Баявая Карона" />
@@ -94,7 +94,7 @@
     <string id="7566s7pt" text="{.Zanocy}Кальчуга Пяхотніка над Паласатай Скурай" />
     <string id="7b8Cwogx" text="{.Muzcynski}Акетон" />
     <string id="7D3jvAfS" text="{.Zanocy}Шкураная Шапка" />
-    <string id="7dAy51ln" text="{.Muzcynski}Цэрвельер над Узброеным Коіфам" />
+    <string id="7dAy51ln" text="{.Muzcynski}Цэрвельер над Збройным Коіфам" />
     <string id="7EAEIUIY" text="{.Zanocy}Цяжкая Кальцавая Кальчуга" />
     <string id="7HbspP6x" text="{.Zanocy}Зграбная Лускатая Кальчуга Легіянера" />
     <string id="7jemQg2V" text="{.Mnozny}Цяжкія Калючыя Стрэлы" />
@@ -133,7 +133,7 @@
     <string id="a3vHlztg" text="{.Mnozny}Пласьцінкавыя Рукавіцы з Палоскай" />
     <string id="a4hyzv3f" text="{.Muzcynski}Тарпан" />
     <string id="A6llHL9s" text="{.Muzcynski}Нізінны Доўгі Лук" />
-    <string id="A8MJWbhf" text="{.Muzcynski}Шалом з Забралам над Мяккай Тканьню" />
+    <string id="A8MJWbhf" text="{.Muzcynski}Шалом з Заслонай над Мяккай Тканьню" />
     <string id="a8ycVmwU" text="{.Muzcynski}Бердыш" />
     <string id="AB1mV5Pg" text="{.Muzcynski}Капалін над Шнураваным Коіфам" />
     <string id="abGJeb3q" text="{.Zanocy}Стургійская Ламелярная Браня" />
@@ -143,7 +143,7 @@
     <string id="aDeVl2EL" text="{.Mnozny}Стургійскія Дротыкі" />
     <string id="Ae9L1a9g" text="{.Zanocy}Кавадла" />
     <string id="aGbTPme1" text="{.Zanocy}Каса" />
-    <string id="agqzAXa9" text="{.Muzcynski}Шалом з Забралам над Мяккім Коіфам" />
+    <string id="agqzAXa9" text="{.Muzcynski}Шалом з Заслонай над Мяккім Коіфам" />
     <string id="aGvBKCG8" text="{.Zanocy}Галава Ваўка" />
     <string id="aGxtOTB8" text="{.Zanocy}Горная Сякера" />
     <string id="AHel76R6" text="{.Zanocy}Хузаіцкая Цяжкая Булава" />
@@ -155,7 +155,7 @@
     <string id="AK0lNDmN" text="{.Zanocy}Апераная Баявая Карона з Каштоўнасьцямі" />
     <string id="AO5LPmQf" text="{.Muzcynski}Цяжкі Контас" />
     <string id="AobNdBBU" text="{.Zanocy}Танная Набіўка" />
-    <string id="aoPbMKwB" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм над Кальчугай" />
+    <string id="aoPbMKwB" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Кальчугай" />
     <string id="aOwcs7Un" text="{.Muzcynski}Круглы Капалін над Скураю" />
     <string id="aQeOcLX4" text="{.Zanocy}Двухзубая Бронзавая Карона" />
     <string id="aQN4Dlx2" text="{.Muzcynski}Цяжкі Акетон" />
@@ -167,7 +167,7 @@
     <string id="aVGSZhCN" text="{.Muzcynski}Шчыт-Павеса" />
     <string id="AWlrtbep" text="{.Muzcynski}Паўночны Гарпун Для Рыбы" />
     <string id="axaK9y6E" text="{.Muzcynski}Закрыты Шалом Рыцара" />
-    <string id="aYoIrpe0" text="{.Muzcynski}Зьвязаны Кальчужны Чусіз" />
+    <string id="aYoIrpe0" text="{.Muzcynski}Зацягнуты Кальчужны Чусіз" />
     <string id="b0pyML1S" text="{.Nijaki}Стургійскае Кап'ё" />
     <string id="b1pqUQju" text="{.Muzcynski}Сегментаваны Скалкэп над Мяккай Тканьню" />
     <string id="b2EDkbhD" text="{.Mnozny}Абгорткі для Абароны Рук" />
@@ -205,7 +205,7 @@
     <string id="bz5lXkHS" text="{.Nijaki}Мяккае Кароткае Паліто без Рукавоў" />
     <string id="bzCoIgk7" text="{.Muzcynski}Ваярскія Біль" />
     <string id="bzr6vtXi" text="{.Muzcynski}Цяжкі Менавліён" />
-    <string id="bzrVXGAl" text="{.Muzcynski}Бронзавы Аздоблены Пёрамі Шпангенхельм над Скураю" />
+    <string id="bzrVXGAl" text="{.Muzcynski}Бронзавы Аздоблены Пёрамі Шпангенхэльм над Скураю" />
     <string id="bZSQpada" text="{.Zanocy}Імперская Цяжкая Сякера" />
     <string id="C077yplu" text="{.Muzcynski}Упрыгожаны Хузаіцкі Шчыт" />
     <string id="c1a5Pt8j" text="{.Muzcynski}Бронзавы Назальхельм над Кальчугай" />
@@ -243,7 +243,7 @@
     <string id="CXnhFf1t" text="{.Mnozny}Узмоцненыя Скураныя Поручы" />
     <string id="CyJiWngO" text="{.Mnozny}Бронзавыя Лускатыя Наплечнікі" />
     <string id="D358wBWJ" text="{.Muzcynski}Цяжкі Ламеляр над Гаўберкам" />
-    <string id="d8DrtmwP" text="{.Muzcynski}Шалом з Забралам над Кальчужным Коіфам" />
+    <string id="d8DrtmwP" text="{.Muzcynski}Шалом з Заслонай над Кальчужным Коіфам" />
     <string id="D9JrTpwU" text="{.Mnozny}Скрыўленыя Боты" />
     <string id="dacwWKE2" text="{.Muzcynski}Зношаны Шчыт-Кропля" />
     <string id="DbavaIis" text="{.Muzcynski}Жалезны Назальхельм над Кальчугай" />
@@ -251,7 +251,7 @@
     <string id="dK4f8ArH" text="{.Zanocy}Імперская Тронкавая Зброя" />
     <string id="DnhVJl4d" text="{.Zanocy}Доўгая Пустэльная Роба" />
     <string id="DoiwC1Qa" text="{.Muzcynski}Кальчужны Чусіз" />
-    <string id="DOYS7dmq" text="{.Mnozny}Зьвязаныя Скураныя Наручы" />
+    <string id="DOYS7dmq" text="{.Mnozny}Зацягнутыя Скураныя Наручы" />
     <string id="dPQGxmJ7" text="{.Mnozny}Узмоцненыя Кальчужныя Міценкі" />
     <string id="dS4zm0UT" text="{.Zanocy}Шыпаваная Скура над Акетонам" />
     <string id="DScCbmoS" text="{.Mnozny}Баттанійскія Шляхетныя Наручы" />
@@ -260,9 +260,9 @@
     <string id="DxRrAuRo" text="{.Nijaki}Баттанійскае Кап'ё" />
     <string id="DyXDcO36" text="{.Zanocy}Эсэрайская Упрыгожаная Ланцуговая Кальчуга" />
     <string id="e0SDWwmU" text="{.Zanocy}Грунтоўная Стэпавая Браня" />
-    <string id="e4lKZhgv" text="{.Mnozny}Грубыя Зьвязаныя Скураныя Наручы" />
+    <string id="e4lKZhgv" text="{.Mnozny}Грубыя Зацягнутыя Скураныя Наручы" />
     <string id="Eb106Xg8" text="{.Muzcynski}Стургійскі Кароткі Меч" />
-    <string id="ebHdQfbX" text="{.Muzcynski}Шпангенхельм з Мяккай Тканьню" />
+    <string id="ebHdQfbX" text="{.Muzcynski}Шпангенхэльм з Мяккай Тканьню" />
     <string id="eDMDUUfw" text="{.Zanocy}Эсэрайская Ланцуговая Кальчуга" />
     <string id="eEMgc7yU" text="{.Muzcynski}Баттанійскі Узмоцнены Велізарны Шчыт" />
     <string id="EezWSI6v" text="{.Zanocy}Умацаваная Браня Найміта" />
@@ -371,7 +371,7 @@
     <string id="inquCxkd" text="{.Nijaki}Эсэрайскае Кап'ё" />
     <string id="inr9Mt1i" text="{.Zanocy}Хузаіцкая Дзіда" />
     <string id="INWSxn7C" text="{.Mnozny}Бронзавыя Ламелярныя Наплечнікі" />
-    <string id="inYBaDwu" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхельм над Кальчугай" />
+    <string id="inYBaDwu" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхэльм над Кальчугай" />
     <string id="IOt4KTHs" text="{.Muzcynski}Міжземны Палфры" />
     <string id="iPfZpGHK" text="{.Muzcynski}Цяжкі Авальны Шчыт" />
     <string id="IPp2QGwE" text="{.Muzcynski}Серп для Сена" />
@@ -446,7 +446,7 @@
     <string id="LI3rc6S2" text="{.Zanocy}Эсэрайская Кідальная Сякера" />
     <string id="lIJ1EVBh" text="{.Mnozny}Скураныя Пальчаткі" />
     <string id="LMo6MaQS" text="{.Zanocy}Ламелярная Браня Катафракта" />
-    <string id="LOPavWRp" text="{.Mnozny}Зьвязаныя Туфлі" />
+    <string id="LOPavWRp" text="{.Mnozny}Зацягнутыя Туфлі" />
     <string id="lPeLZge5" text="{.Mnozny}Мехавыя Браняваныя Штаны" />
     <string id="LqA9uBH9" text="{.Muzcynski}Завостраны Скалкэп над Тканымі Галаўнымі Абгорткамі" />
     <string id="LRbGXEw2" text="{.Muzcynski}Апераны Упрыгожаны Кальчужны Шалом з Наносьнікам" />
@@ -490,7 +490,7 @@
     <string id="n21mBbbR" text="{.Muzcynski}Біль" />
     <string id="n7c7tnx9" text="{.Muzcynski}Шалом Вайскавода з Абаронай Носа" />
     <string id="nbjUGjaZ" text="{.Muzcynski}Стургійскі Шчыт Вершніка" />
-    <string id="ndfDy5B8" text="{.Mnozny}Зьвязаныя Галаўныя Абгорткі" />
+    <string id="ndfDy5B8" text="{.Mnozny}Закручаныя Галаўныя Абгорткі" />
     <string id="newiAaR9" text="{.Muzcynski}Упрыгожаны Шалом з Абаронай Вачэй" />
     <string id="nhoDWrVf" text="{.Muzcynski}Сеткавы Тэставы Меч 2г" />
     <string id="NiBDR9ld" text="{.Muzcynski}Упрыгожаны Бронзавы Шалом з Абаронай Шчок" />
@@ -573,7 +573,7 @@
     <string id="qo8hwDNU" text="{.Zanocy}Грубая Футравая Браня" />
     <string id="qsVRoGUv" text="{.Muzcynski}Адкрыты Галаўны Шаль" />
     <string id="qT6jIu3v" text="{.Zanocy}Футравая Спадніца з Тунікай" />
-    <string id="QtuZSbG9" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм над Коіфам" />
+    <string id="QtuZSbG9" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Коіфам" />
     <string id="QUGDr6Te" text="{.Muzcynski}Булат" />
     <string id="QVGL3eB0" text="{.Muzcynski}Адкрыты Пустэльны Шалом" />
     <string id="qVj5NqrL" text="{.Muzcynski}Поўны Шлем над Мяккай Шапкай" />
@@ -603,7 +603,7 @@
     <string id="s03kaATW" text="{.Nijaki}Хузаіцкае Кап'ё" />
     <string id="S1SUK8zk" text="{.Muzcynski}Капалін над Кальчужным Коіфам" />
     <string id="S1XL4KJh" text="{.Nijaki}Раскошнае Тлустае Паліто" />
-    <string id="S9htzkbe" text="{.Muzcynski}Гандлёвы Капялюхы" />
+    <string id="S9htzkbe" text="{.Muzcynski}Гандлёвы Капялюх" />
     <string id="sAml91Z3" text="{.Zanocy}Раскошная Брыганціна" />
     <string id="sbbNL1qF" text="{.Mnozny}Узмоцненыя Лускатыя Наплечнікі" />
     <string id="SGa04hNj" text="{.Zanocy}Вландыйская Цяжкая Дзіда" />
@@ -631,14 +631,14 @@
     <string id="TFT2Xapz" text="{.Muzcynski}Востраканцовы Шалом над Мяккай Тканьню" />
     <string id="tG1Q8r2u" text="{.Zanocy}Ламелярная Браня Улана" />
     <string id="TGpFbISX" text="{.Muzcynski}Скураны Шыпаваны Шлем" />
-    <string id="tiSffNik" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхельм з Наносьнікам над Скураю" />
+    <string id="tiSffNik" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхэльм з Наносьнікам над Скураю" />
     <string id="tiTTWhpW" text="{.Zanocy}Мяккая Скураная Кашуля" />
     <string id="Tj1Zb47Q" text="{.Mnozny}Стэпавыя Скураныя Боты" />
     <string id="TjoKgbV6" text="{.Muzcynski}Закрыты Шалом з Абаронай Вачэй" />
     <string id="tKODIU0F" text="{.Mnozny}Скураныя Ламелярныя Наплечнікі" />
     <string id="TmJubG8W" text="{.Mnozny}Баттанійскія Наплечнікі з Дзягай і Покрывам" />
     <string id="tMLH04n4" text="{.Muzcynski}Капалін-Капялюх над Кальчужным Коіфам" />
-    <string id="tMwsE9IR" text="{.Mnozny}Зьвязаныя Скураныя Боты" />
+    <string id="tMwsE9IR" text="{.Mnozny}Зацягнутыя Скураныя Боты" />
     <string id="Tp7zXWGa" text="{.Muzcynski}Шалом з Наносьнікам над Мяккім Коіфам" />
     <string id="tpQLvMSM" text="{.Muzcynski}Шалом з Наносьнікам над Кальчугай" />
     <string id="TTWL7RLe" text="{.Muzcynski}Арбалет" />
@@ -723,12 +723,12 @@
     <string id="WsUvpBwM" text="{.Muzcynski}Хуткі Кароткі Лук" />
     <string id="WUArer5A" text="{.Muzcynski}Адкрыты Мяккі Коіф" />
     <string id="WvDZMmaj" text="{.Muzcynski}Шалом Качэўніка" />
-    <string id="wwAFqJE3" text="{.Muzcynski}Узброены Меч" />
+    <string id="wwAFqJE3" text="{.Muzcynski}Збройны Меч" />
     <string id="wWqavjat" text="{.Zanocy}Лёгкая Доўгая Мяккая Браня" />
     <string id="WXjQNIJW" text="{.Muzcynski}Вольны Загорнуты Пустэльны Шалом" />
     <string id="WYFDXE82" text="{.Muzcynski}Велізарны Круглы Шчыт" />
     <string id="WyxIVvhe" text="{.Muzcynski}Эсэрайскі Авальны Шчыт" />
-    <string id="WYytQbvS" text="{.Muzcynski}Поўны Шлем над Узброеным Коіфам" />
+    <string id="WYytQbvS" text="{.Muzcynski}Поўны Шлем над Збройным Коіфам" />
     <string id="x1kf94SW" text="{.Muzcynski}Рабрысты Шлем" />
     <string id="X1Wn0sBa" text="{.Muzcynski}Cкураны Шыпаваны Шлем над Грубай Лускатай" />
     <string id="x3lcf2Do" text="{.Zanocy}Раскошная Ламелярная Камізэлька над Скураю" />
@@ -780,7 +780,7 @@
     <string id="yQqsd0bh" text="{.Mnozny}Імперскія Балты" />
     <string id="ys3kQM0R" text="{.Zanocy}Імперская Ламелярная Браня" />
     <string id="yTWOMSmv" text="{.Zanocy}Канапляная Туніка" />
-    <string id="YUWhHQmz" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхельм з Наносьнікам" />
+    <string id="YUWhHQmz" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхэльм з Наносьнікам" />
     <string id="YxglkaXU" text="{.Muzcynski}Белы Табард над Кальчужным Гаўберкам" />
     <string id="Z6Ak3H6G" text="{.Muzcynski}Джарэйд" />
     <string id="z6eTba5h" text="{.Muzcynski}Цяжкі Назальхельм над Шнураванай Тканьню" />
