--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -308,7 +308,7 @@
     <string id="3SBDbPjD" text="Прыемна гэтае чуць! У добры час." />
     <string id="3Sk0BQ4n" text="Я набуду ў вас тавары за {TOTAL_GOLD}{GOLD_ICON}. Так мы абодва атрымаем жаданае." />
     <string id="3skTM1DC" text="Большасьць людзей усадзіць вам у сьпіну нож за некалькі капеек. Майце некалькі сяброў і трымайце іх блізка, мяркую." />
-    <string id="3sRdGQou" text="Пакінуць" />
+    <string id="3sRdGQou" text="Сысьці" />
     <string id="3ssQAe1t" text="Цудоўна гэтае чуць" />
     <string id="3TIbxe5d" text="{FIRSTNAME} {?FEMALE}Піваварка{?}Півавар{\?}" />
     <string id="3tLU4AG7" text="{VALUE}% страты зьнясіленьня падчас аблогі ў кіраваным селішчы." />
@@ -1111,7 +1111,7 @@
     <string id="bHNU9uz2" text="Усе прыхільнікі атрымліваюць адносіны з падтрыманым кланам кандыдатаў і могуць страчваць зь іншымі." />
     <string id="bhoCBIWB" text="дазваляе гаспадару мець вялікую асабістую гвардыю" />
     <string id="Bhtt6XPv" text="Заробак вашых людзей затрымваецца. Гэта ня тая кампанія, зь якой хочацца ваяваць" />
-    <string id="bHZyublA" text="Так... Я {?NPC.GENDER}рада{?}рады{\?} магчымасьці траціць час разам." />
+    <string id="bHZyublA" text="Так... Я {?NPC.GENDER}рада{?}рады{\?} магчымасьці бавіць час разам." />
     <string id="BI1UnHaB" text="Добра, добра. Я разумею, што гэта зойме час, але не прымушайце мяне чакаць задоўга." />
     <string id="bIDvq6wA" text="Вораг болей ня мае вёсак. {QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}скасавала{?}скасаваў{\?} вашую місію." />
     <string id="bigS7KHi" text="Добра Складзены" />
