--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_crafting_pieces_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_crafting_pieces_xml_by.xml
@@ -106,7 +106,7 @@
     <string id="9qaanOpL" text="Prosty Paŭnočny Efies" />
     <string id="9T2KA9sk" text="Załataja Złučanaja Ŭpryhožanaja Stalovaja Ručka" />
     <string id="9Y1zUaE7" text="Impierski Kruhły Efies" />
-    <string id="A06HEqvF" text="Źviazanaje Kryło Kapja" />
+    <string id="A06HEqvF" text="Zaciahnutaje Kryło Kapja" />
     <string id="a0erBuF1" text="Krukavataje Navierša Siakiery" />
     <string id="A1m12E8N" text="Doŭhaja Ŭzbrojenaja Harda Kinžała" />
     <string id="a4qSDsmb" text="Impierskaja Załataja Vydatnaja Harda Mieča" />
@@ -162,7 +162,7 @@
     <string id="bGfs8gNv" text="Paŭnočnaje Lazo Pałaša" />
     <string id="bjQ8J71a" text="Doŭhaje Navierša Hlefa" />
     <string id="BKHKQ15N" text="Turkusavy Efies" />
-    <string id="bki9u9FW" text="Uzbrojenaje Lazo Mieča z Załatym Kruhłym Vodciskam" />
+    <string id="bki9u9FW" text="Zbrojnaje Lazo Mieča z Załatym Kruhłym Vodciskam" />
     <string id="BL96pnde" text="Hrubaja Skuranaja Adnaručnaja Ručka Sikača" />
     <string id="blaVlvm2" text="Upryhožanaje Karotkaje Lazo Vajskovaha Mieča" />
     <string id="bM8kSewD" text="Rabrystaja Paŭnočnaja Harda" />
@@ -466,8 +466,8 @@
     <string id="nZ5e678J" text="Prosty Efies-Koła" />
     <string id="NzjHzhwC" text="Dyjamientavaja Harda z Vystupam" />
     <string id="o2kFafbu" text="Uschodniaje Stalovaje Navierša Bułavy" />
-    <string id="O2kPKeuK" text="Uzbrojenaje Lazo Mieča z Załatym Hravieravańniem" />
-    <string id="OBeOZ27b" text="Navierša Hlefa" />
+    <string id="O2kPKeuK" text="Zbrojnaje Lazo Mieča z Załatym Hravieravańniem" />
+    <string id="OBeOZ27b" text="Navierša Hlefy" />
     <string id="oeELDZRo" text="Haryzantalny Pramavuholny Ściah" />
     <string id="oGPHQt1J" text="Vysokaja Dvuchručnaja Ručka Sikača" />
     <string id="OHHpwD0F" text="Pramoje Lazo Šabli" />
@@ -604,7 +604,7 @@
     <string id="Uhc0KIdz" text="Chvajovy Posach Kapja" />
     <string id="uIciSK8t" text="Upryhožanaja Kruhłaja Paŭdniovaja Šlachietnaja Ručka" />
     <string id="uKu7rTrW" text="Ščylnaja Zahornutaja Vuzkaja Adnaručnaja Ručka" />
-    <string id="UKWwPPkx" text="Uzbrojenaje Lazo Mieča z Załatym Vodciskam Pialostkaŭ" />
+    <string id="UKWwPPkx" text="Zbrojnaje Lazo Mieča z Załatym Vodciskam Pialostkaŭ" />
     <string id="ukYW8FVm" text="Cybulny Efies Šabli" />
     <string id="uLqEw8LB" text="Šypavanaja Impierskaja Doŭhaja Ručka" />
     <string id="uQsJQLJH" text="Karotkaja Paŭnočnaja Škuranaja Ručka" />
@@ -615,7 +615,7 @@
     <string id="uwG8iwBc" text="Doŭhaje Raŭninnaje Kapjo" />
     <string id="V0khEGns" text="Płoski Efies" />
     <string id="v22onVb2" text="Trochi Rabrystaje Lazo Flissy" />
-    <string id="V3JMuFEg" text="Źviazanaje Dziaržańnie Bułavy" />
+    <string id="V3JMuFEg" text="Zaciahnutaje Dziaržańnie Bułavy" />
     <string id="V6YQykoc" text="Zavostranaja Harda Kinžała z Achovaj" />
     <string id="V9Kbq6vj" text="Tupaja Pałoska Dla Praktyki" />
     <string id="VbpiYB68" text="Upryhožanaje Šyrokaje Karotkaje Lazo z Dołam" />
