--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_module_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_module_strings_xml_by.xml
@@ -107,7 +107,7 @@
     <string id="3o6FDRsq" text="Zachoplenyja Harady" />
     <string id="3PzgpFGq" text="Niejtraln." />
     <string id="3qFPyJtB" text="Čakaje ŭ {SETTLEMENT_NAME}." />
-    <string id="3sRdGQou" text="Pakinuć" />
+    <string id="3sRdGQou" text="Syści" />
     <string id="3sWa2Hmt" text="moj syn {REFERING_HERO.LINK}" />
     <string id="3syV6ymi" text="tupoj" />
     <string id="3tJq5QyQ" text="{HEALTHY_NUM}+{WOUNDED_NUM}r" />
@@ -1131,7 +1131,7 @@
     <string id="mbS0DkUo" text="Rabavańnie" />
     <string id="mbT1uNPa" text="Kinžał" />
     <string id="Mc8ojOGn" text="Dym" />
-    <string id="MciIqod6" text="Najezd Dzidaju" />
+    <string id="MciIqod6" text="Najezd Dzidaj" />
     <string id="mDbaNQay" text="Ruchajciesia napierad i pasprabujcie udaryć svajho apanienta!" />
     <string id="mds0myr4" text="{HERO.NAME} {?PLAYER.GENDER}straciła{?}straciŭ{\?} {TRAIT_NAME} svaju asablivaść." />
     <string id="MeQmoYb4" text="Vašyja adnosiny zanadta małyja, kab nabyć hetaha vajara. {newline}Vašyja adnosiny {REL1}. Patrebnyja {REL2}." />
