--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
@@ -48,14 +48,14 @@
     <string id="3c3uqW3d" text="{.Muzcynski}Battanijski Karotki Mieč" />
     <string id="3DV3GoHb" text="{.Muzcynski}Zavostrany Skałkep z Kalčuhaj" />
     <string id="3eb3ZyiU" text="{.Muzcynski}Vielmi Dobry Łuk" />
-    <string id="3iq3rOh8" text="{.Muzcynski}Kapalin nad Uzbrojenym Koifam" />
+    <string id="3iq3rOh8" text="{.Muzcynski}Kapalin nad Zbrojnym Koifam" />
     <string id="3lauB1HH" text="{.Zanocy}Bronzavaja Łamielarnaja Kamizelka nad Hambiezonam" />
     <string id="3qF14kaR" text="{.Muzcynski}Impierski Pałdron-Nakidka" />
     <string id="3UxfT9Bu" text="{.Zanocy}Zahornutaja Skuranaja Šapka" />
     <string id="3WdXljdt" text="{.Muzcynski}Dužy Nachasen" />
     <string id="3Wzhxkn1" text="{.Muzcynski}Zban" />
     <string id="3XSuOAYT" text="{.Muzcynski}Šokavy Doŭhi Łuk" />
-    <string id="3Z91Nxbf" text="{.Muzcynski}Španhienchielm sa Skuraju" />
+    <string id="3Z91Nxbf" text="{.Muzcynski}Španhienchelm sa Skuraju" />
     <string id="42KNket2" text="{.Mnozny}Hornyja Boty" />
     <string id="46orXtt0" text="{.Nijaki}Lasnoje Adzieńnie" />
     <string id="4a99jSHC" text="{.Mnozny}Stepavyja Skuranyja Naplečniki" />
@@ -75,7 +75,7 @@
     <string id="4wdgiTta" text="{.Muzcynski}Sierp" />
     <string id="4xUR2kAj" text="{.Zanocy}Impierskaja Ciažkaja Bułava" />
     <string id="4YxbZlbi" text="{.Mnozny}Zahornutyja Tufli" />
-    <string id="51EcVnzd" text="{.Muzcynski}Šałom z Zabrałam nad Šnuravanym Koifam" />
+    <string id="51EcVnzd" text="{.Muzcynski}Šałom z Zasłonaj nad Šnuravanym Koifam" />
     <string id="564PHXk3" text="{.Zanocy}Upryhožanaja Skuranaja Zaprežka" />
     <string id="5bEHZ2z1" text="{.Muzcynski}Impierski Šałom z Abaronaj Vačej" />
     <string id="5c4cHL9Z" text="{.Zanocy}Chuzaickaja Bajavaja Karona" />
@@ -94,7 +94,7 @@
     <string id="7566s7pt" text="{.Zanocy}Kalčuha Piachotnika nad Pałasataj Skuraj" />
     <string id="7b8Cwogx" text="{.Muzcynski}Akieton" />
     <string id="7D3jvAfS" text="{.Zanocy}Škuranaja Šapka" />
-    <string id="7dAy51ln" text="{.Muzcynski}Cervieljer nad Uzbrojenym Koifam" />
+    <string id="7dAy51ln" text="{.Muzcynski}Cervieljer nad Zbrojnym Koifam" />
     <string id="7EAEIUIY" text="{.Zanocy}Ciažkaja Kalcavaja Kalčuha" />
     <string id="7HbspP6x" text="{.Zanocy}Zhrabnaja Łuskataja Kalčuha Lehijaniera" />
     <string id="7jemQg2V" text="{.Mnozny}Ciažkija Kalučyja Streły" />
@@ -133,7 +133,7 @@
     <string id="a3vHlztg" text="{.Mnozny}Płaścinkavyja Rukavicy z Pałoskaj" />
     <string id="a4hyzv3f" text="{.Muzcynski}Tarpan" />
     <string id="A6llHL9s" text="{.Muzcynski}Nizinny Doŭhi Łuk" />
-    <string id="A8MJWbhf" text="{.Muzcynski}Šałom z Zabrałam nad Miakkaj Tkańniu" />
+    <string id="A8MJWbhf" text="{.Muzcynski}Šałom z Zasłonaj nad Miakkaj Tkańniu" />
     <string id="a8ycVmwU" text="{.Muzcynski}Bierdyš" />
     <string id="AB1mV5Pg" text="{.Muzcynski}Kapalin nad Šnuravanym Koifam" />
     <string id="abGJeb3q" text="{.Zanocy}Sturhijskaja Łamielarnaja Brania" />
@@ -143,7 +143,7 @@
     <string id="aDeVl2EL" text="{.Mnozny}Sturhijskija Drotyki" />
     <string id="Ae9L1a9g" text="{.Zanocy}Kavadła" />
     <string id="aGbTPme1" text="{.Zanocy}Kasa" />
-    <string id="agqzAXa9" text="{.Muzcynski}Šałom z Zabrałam nad Miakkim Koifam" />
+    <string id="agqzAXa9" text="{.Muzcynski}Šałom z Zasłonaj nad Miakkim Koifam" />
     <string id="aGvBKCG8" text="{.Zanocy}Hałava Vaŭka" />
     <string id="aGxtOTB8" text="{.Zanocy}Hornaja Siakiera" />
     <string id="AHel76R6" text="{.Zanocy}Chuzaickaja Ciažkaja Bułava" />
@@ -155,7 +155,7 @@
     <string id="AK0lNDmN" text="{.Zanocy}Apieranaja Bajavaja Karona z Kaštoŭnaściami" />
     <string id="AO5LPmQf" text="{.Muzcynski}Ciažki Kontas" />
     <string id="AobNdBBU" text="{.Zanocy}Tannaja Nabiŭka" />
-    <string id="aoPbMKwB" text="{.Muzcynski}Azdobleny Piorami Španhienchielm nad Kalčuhaj" />
+    <string id="aoPbMKwB" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Kalčuhaj" />
     <string id="aOwcs7Un" text="{.Muzcynski}Kruhły Kapalin nad Skuraju" />
     <string id="aQeOcLX4" text="{.Zanocy}Dvuchzubaja Bronzavaja Karona" />
     <string id="aQN4Dlx2" text="{.Muzcynski}Ciažki Akieton" />
@@ -167,7 +167,7 @@
     <string id="aVGSZhCN" text="{.Muzcynski}Ščyt-Paviesa" />
     <string id="AWlrtbep" text="{.Muzcynski}Paŭnočny Harpun Dla Ryby" />
     <string id="axaK9y6E" text="{.Muzcynski}Zakryty Šałom Rycara" />
-    <string id="aYoIrpe0" text="{.Muzcynski}Źviazany Kalčužny Čusiz" />
+    <string id="aYoIrpe0" text="{.Muzcynski}Zaciahnuty Kalčužny Čusiz" />
     <string id="b0pyML1S" text="{.Nijaki}Sturhijskaje Kapjo" />
     <string id="b1pqUQju" text="{.Muzcynski}Siehmientavany Skałkep nad Miakkaj Tkańniu" />
     <string id="b2EDkbhD" text="{.Mnozny}Abhortki dla Abarony Ruk" />
@@ -205,7 +205,7 @@
     <string id="bz5lXkHS" text="{.Nijaki}Miakkaje Karotkaje Palito biez Rukavoŭ" />
     <string id="bzCoIgk7" text="{.Muzcynski}Vajarskija Bil" />
     <string id="bzr6vtXi" text="{.Muzcynski}Ciažki Mienavlijon" />
-    <string id="bzrVXGAl" text="{.Muzcynski}Bronzavy Azdobleny Piorami Španhienchielm nad Skuraju" />
+    <string id="bzrVXGAl" text="{.Muzcynski}Bronzavy Azdobleny Piorami Španhienchelm nad Skuraju" />
     <string id="bZSQpada" text="{.Zanocy}Impierskaja Ciažkaja Siakiera" />
     <string id="C077yplu" text="{.Muzcynski}Upryhožany Chuzaicki Ščyt" />
     <string id="c1a5Pt8j" text="{.Muzcynski}Bronzavy Nazalchielm nad Kalčuhaj" />
@@ -243,7 +243,7 @@
     <string id="CXnhFf1t" text="{.Mnozny}Uzmocnienyja Skuranyja Poručy" />
     <string id="CyJiWngO" text="{.Mnozny}Bronzavyja Łuskatyja Naplečniki" />
     <string id="D358wBWJ" text="{.Muzcynski}Ciažki Łamielar nad Haŭbierkam" />
-    <string id="d8DrtmwP" text="{.Muzcynski}Šałom z Zabrałam nad Kalčužnym Koifam" />
+    <string id="d8DrtmwP" text="{.Muzcynski}Šałom z Zasłonaj nad Kalčužnym Koifam" />
     <string id="D9JrTpwU" text="{.Mnozny}Skryŭlenyja Boty" />
     <string id="dacwWKE2" text="{.Muzcynski}Znošany Ščyt-Kropla" />
     <string id="DbavaIis" text="{.Muzcynski}Žalezny Nazalchielm nad Kalčuhaj" />
@@ -251,7 +251,7 @@
     <string id="dK4f8ArH" text="{.Zanocy}Impierskaja Tronkavaja Zbroja" />
     <string id="DnhVJl4d" text="{.Zanocy}Doŭhaja Pustelnaja Roba" />
     <string id="DoiwC1Qa" text="{.Muzcynski}Kalčužny Čusiz" />
-    <string id="DOYS7dmq" text="{.Mnozny}Źviazanyja Skuranyja Naručy" />
+    <string id="DOYS7dmq" text="{.Mnozny}Zaciahnutyja Skuranyja Naručy" />
     <string id="dPQGxmJ7" text="{.Mnozny}Uzmocnienyja Kalčužnyja Micienki" />
     <string id="dS4zm0UT" text="{.Zanocy}Šypavanaja Skura nad Akietonam" />
     <string id="DScCbmoS" text="{.Mnozny}Battanijskija Šlachietnyja Naručy" />
@@ -260,9 +260,9 @@
     <string id="DxRrAuRo" text="{.Nijaki}Battanijskaje Kapjo" />
     <string id="DyXDcO36" text="{.Zanocy}Eserajskaja Upryhožanaja Łancuhovaja Kalčuha" />
     <string id="e0SDWwmU" text="{.Zanocy}Hruntoŭnaja Stepavaja Brania" />
-    <string id="e4lKZhgv" text="{.Mnozny}Hrubyja Źviazanyja Skuranyja Naručy" />
+    <string id="e4lKZhgv" text="{.Mnozny}Hrubyja Zaciahnutyja Skuranyja Naručy" />
     <string id="Eb106Xg8" text="{.Muzcynski}Sturhijski Karotki Mieč" />
-    <string id="ebHdQfbX" text="{.Muzcynski}Španhienchielm z Miakkaj Tkańniu" />
+    <string id="ebHdQfbX" text="{.Muzcynski}Španhienchelm z Miakkaj Tkańniu" />
     <string id="eDMDUUfw" text="{.Zanocy}Eserajskaja Łancuhovaja Kalčuha" />
     <string id="eEMgc7yU" text="{.Muzcynski}Battanijski Uzmocnieny Vielizarny Ščyt" />
     <string id="EezWSI6v" text="{.Zanocy}Umacavanaja Brania Najmita" />
@@ -371,7 +371,7 @@
     <string id="inquCxkd" text="{.Nijaki}Eserajskaje Kapjo" />
     <string id="inr9Mt1i" text="{.Zanocy}Chuzaickaja Dzida" />
     <string id="INWSxn7C" text="{.Mnozny}Bronzavyja Łamielarnyja Naplečniki" />
-    <string id="inYBaDwu" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchielm nad Kalčuhaj" />
+    <string id="inYBaDwu" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchelm nad Kalčuhaj" />
     <string id="IOt4KTHs" text="{.Muzcynski}Mižziemny Pałfry" />
     <string id="iPfZpGHK" text="{.Muzcynski}Ciažki Avalny Ščyt" />
     <string id="IPp2QGwE" text="{.Muzcynski}Sierp dla Siena" />
@@ -446,7 +446,7 @@
     <string id="LI3rc6S2" text="{.Zanocy}Eserajskaja Kidalnaja Siakiera" />
     <string id="lIJ1EVBh" text="{.Mnozny}Skuranyja Palčatki" />
     <string id="LMo6MaQS" text="{.Zanocy}Łamielarnaja Brania Katafrakta" />
-    <string id="LOPavWRp" text="{.Mnozny}Źviazanyja Tufli" />
+    <string id="LOPavWRp" text="{.Mnozny}Zaciahnutyja Tufli" />
     <string id="lPeLZge5" text="{.Mnozny}Miechavyja Braniavanyja Štany" />
     <string id="LqA9uBH9" text="{.Muzcynski}Zavostrany Skałkep nad Tkanymi Hałaŭnymi Abhortkami" />
     <string id="LRbGXEw2" text="{.Muzcynski}Apierany Upryhožany Kalčužny Šałom z Nanośnikam" />
@@ -490,7 +490,7 @@
     <string id="n21mBbbR" text="{.Muzcynski}Bil" />
     <string id="n7c7tnx9" text="{.Muzcynski}Šałom Vajskavoda z Abaronaj Nosa" />
     <string id="nbjUGjaZ" text="{.Muzcynski}Sturhijski Ščyt Vieršnika" />
-    <string id="ndfDy5B8" text="{.Mnozny}Źviazanyja Hałaŭnyja Abhortki" />
+    <string id="ndfDy5B8" text="{.Mnozny}Zakručanyja Hałaŭnyja Abhortki" />
     <string id="newiAaR9" text="{.Muzcynski}Upryhožany Šałom z Abaronaj Vačej" />
     <string id="nhoDWrVf" text="{.Muzcynski}Sietkavy Testavy Mieč 2h" />
     <string id="NiBDR9ld" text="{.Muzcynski}Upryhožany Bronzavy Šałom z Abaronaj Ščok" />
@@ -573,7 +573,7 @@
     <string id="qo8hwDNU" text="{.Zanocy}Hrubaja Futravaja Brania" />
     <string id="qsVRoGUv" text="{.Muzcynski}Adkryty Hałaŭny Šal" />
     <string id="qT6jIu3v" text="{.Zanocy}Futravaja Spadnica z Tunikaj" />
-    <string id="QtuZSbG9" text="{.Muzcynski}Azdobleny Piorami Španhienchielm nad Koifam" />
+    <string id="QtuZSbG9" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Koifam" />
     <string id="QUGDr6Te" text="{.Muzcynski}Bułat" />
     <string id="QVGL3eB0" text="{.Muzcynski}Adkryty Pustelny Šałom" />
     <string id="qVj5NqrL" text="{.Muzcynski}Poŭny Šlem nad Miakkaj Šapkaj" />
@@ -603,7 +603,7 @@
     <string id="s03kaATW" text="{.Nijaki}Chuzaickaje Kapjo" />
     <string id="S1SUK8zk" text="{.Muzcynski}Kapalin nad Kalčužnym Koifam" />
     <string id="S1XL4KJh" text="{.Nijaki}Raskošnaje Tłustaje Palito" />
-    <string id="S9htzkbe" text="{.Muzcynski}Handlovy Kapialuchy" />
+    <string id="S9htzkbe" text="{.Muzcynski}Handlovy Kapialuch" />
     <string id="sAml91Z3" text="{.Zanocy}Raskošnaja Bryhancina" />
     <string id="sbbNL1qF" text="{.Mnozny}Uzmocnienyja Łuskatyja Naplečniki" />
     <string id="SGa04hNj" text="{.Zanocy}Vłandyjskaja Ciažkaja Dzida" />
@@ -631,14 +631,14 @@
     <string id="TFT2Xapz" text="{.Muzcynski}Vostrakancovy Šałom nad Miakkaj Tkańniu" />
     <string id="tG1Q8r2u" text="{.Zanocy}Łamielarnaja Brania Ułana" />
     <string id="TGpFbISX" text="{.Muzcynski}Skurany Šypavany Šlem" />
-    <string id="tiSffNik" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchielm z Nanośnikam nad Skuraju" />
+    <string id="tiSffNik" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchelm z Nanośnikam nad Skuraju" />
     <string id="tiTTWhpW" text="{.Zanocy}Miakkaja Skuranaja Kašula" />
     <string id="Tj1Zb47Q" text="{.Mnozny}Stepavyja Skuranyja Boty" />
     <string id="TjoKgbV6" text="{.Muzcynski}Zakryty Šałom z Abaronaj Vačej" />
     <string id="tKODIU0F" text="{.Mnozny}Skuranyja Łamielarnyja Naplečniki" />
     <string id="TmJubG8W" text="{.Mnozny}Battanijskija Naplečniki z Dziahaj i Pokryvam" />
     <string id="tMLH04n4" text="{.Muzcynski}Kapalin-Kapialuch nad Kalčužnym Koifam" />
-    <string id="tMwsE9IR" text="{.Mnozny}Źviazanyja Skuranyja Boty" />
+    <string id="tMwsE9IR" text="{.Mnozny}Zaciahnutyja Skuranyja Boty" />
     <string id="Tp7zXWGa" text="{.Muzcynski}Šałom z Nanośnikam nad Miakkim Koifam" />
     <string id="tpQLvMSM" text="{.Muzcynski}Šałom z Nanośnikam nad Kalčuhaj" />
     <string id="TTWL7RLe" text="{.Muzcynski}Arbalet" />
@@ -723,12 +723,12 @@
     <string id="WsUvpBwM" text="{.Muzcynski}Chutki Karotki Łuk" />
     <string id="WUArer5A" text="{.Muzcynski}Adkryty Miakki Koif" />
     <string id="WvDZMmaj" text="{.Muzcynski}Šałom Kačeŭnika" />
-    <string id="wwAFqJE3" text="{.Muzcynski}Uzbrojeny Mieč" />
+    <string id="wwAFqJE3" text="{.Muzcynski}Zbrojny Mieč" />
     <string id="wWqavjat" text="{.Zanocy}Lohkaja Doŭhaja Miakkaja Brania" />
     <string id="WXjQNIJW" text="{.Muzcynski}Volny Zahornuty Pustelny Šałom" />
     <string id="WYFDXE82" text="{.Muzcynski}Vielizarny Kruhły Ščyt" />
     <string id="WyxIVvhe" text="{.Muzcynski}Eserajski Avalny Ščyt" />
-    <string id="WYytQbvS" text="{.Muzcynski}Poŭny Šlem nad Uzbrojenym Koifam" />
+    <string id="WYytQbvS" text="{.Muzcynski}Poŭny Šlem nad Zbrojnym Koifam" />
     <string id="x1kf94SW" text="{.Muzcynski}Rabrysty Šlem" />
     <string id="X1Wn0sBa" text="{.Muzcynski}Ckurany Šypavany Šlem nad Hrubaj Łuskataj" />
     <string id="x3lcf2Do" text="{.Zanocy}Raskošnaja Łamielarnaja Kamizelka nad Skuraju" />
@@ -780,7 +780,7 @@
     <string id="yQqsd0bh" text="{.Mnozny}Impierskija Bałty" />
     <string id="ys3kQM0R" text="{.Zanocy}Impierskaja Łamielarnaja Brania" />
     <string id="yTWOMSmv" text="{.Zanocy}Kanaplanaja Tunika" />
-    <string id="YUWhHQmz" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchielm z Nanośnikam" />
+    <string id="YUWhHQmz" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchelm z Nanośnikam" />
     <string id="YxglkaXU" text="{.Muzcynski}Bieły Tabard nad Kalčužnym Haŭbierkam" />
     <string id="Z6Ak3H6G" text="{.Muzcynski}Džarejd" />
     <string id="z6eTba5h" text="{.Muzcynski}Ciažki Nazalchielm nad Šnuravanaj Tkańniu" />
