--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -308,7 +308,7 @@
     <string id="3SBDbPjD" text="Pryjemna hetaje čuć! U dobry čas." />
     <string id="3Sk0BQ4n" text="Ja nabudu ŭ vas tavary za {TOTAL_GOLD}{GOLD_ICON}. Tak my abodva atrymajem žadanaje." />
     <string id="3skTM1DC" text="Bolšaść ludziej usadzić vam u śpinu nož za niekalki kapiejek. Majcie niekalki siabroŭ i trymajcie ich blizka, miarkuju." />
-    <string id="3sRdGQou" text="Pakinuć" />
+    <string id="3sRdGQou" text="Syści" />
     <string id="3ssQAe1t" text="Cudoŭna hetaje čuć" />
     <string id="3TIbxe5d" text="{FIRSTNAME} {?FEMALE}Pivavarka{?}Pivavar{\?}" />
     <string id="3tLU4AG7" text="{VALUE}% straty źniasileńnia padčas abłohi ŭ kiravanym sieliščy." />
@@ -1111,7 +1111,7 @@
     <string id="bHNU9uz2" text="Usie prychilniki atrymlivajuć adnosiny z padtrymanym kłanam kandydataŭ i mohuć stračvać ź inšymi." />
     <string id="bhoCBIWB" text="dazvalaje haspadaru mieć vialikuju asabistuju hvardyju" />
     <string id="Bhtt6XPv" text="Zarobak vašych ludziej zatrymvajecca. Heta nia taja kampanija, ź jakoj chočacca vajavać" />
-    <string id="bHZyublA" text="Tak... Ja {?NPC.GENDER}rada{?}rady{\?} mahčymaści tracić čas razam." />
+    <string id="bHZyublA" text="Tak... Ja {?NPC.GENDER}rada{?}rady{\?} mahčymaści bavić čas razam." />
     <string id="BI1UnHaB" text="Dobra, dobra. Ja razumieju, što heta zojmie čas, ale nie prymušajcie mianie čakać zadoŭha." />
     <string id="bIDvq6wA" text="Vorah bolej nia maje viosak. {QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}skasavała{?}skasavaŭ{\?} vašuju misiju." />
     <string id="bigS7KHi" text="Dobra Składzieny" />
