--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spcultures_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spcultures_xml_by.xml
@@ -288,7 +288,7 @@
     <string id="DaCppjI9" text="Ulpa" />
     <string id="DakafAXa" text="Zamantovinh" />
     <string id="daulkQvv" text="Brynija" />
-    <string id="DBHAFW5k" text="Asryk" />
+    <string id="DBHAFW5k" text="Ozryk" />
     <string id="dey9d9DX" text="Kasiovinh" />
     <string id="dFHXmyaj" text="Tandred" />
     <string id="DfZ5oi0O" text="Rahna" />
@@ -896,7 +896,7 @@
     <string id="WuMGWUJ7" text="Addyjon" />
     <string id="wvLyCxZz" text="Alvard" />
     <string id="wYPWlhme" text="Zandzina" />
-    <string id="X0kKBzsW" text="Kalradyjcy - heta narod Impieryi, ale ŭ našy čas jany dali svajo imia ŭsiamu kantynientu, nad jakim jany daminujuć. Tysiaču hadoŭ nazad jany byli nia vartym ŭvahi plemiem, što žyło na ŭzhorystaj miascovaści pamiž paŭdniovym moram i lasami Battanii. Adna tradycyja adździalała ich ad svaich susiedziaŭ: u kalradyjcaŭ nie było haspadaroŭ. Ich hramadzianie zaŭsiody prajaŭlali vialikuju cikavaść da majsterstva samakiravańnia, bałansujučy pamiž abaronaj svabody indyvidualnaści i patrebnaściami haspadarstva. Mahčyma, mienavita tamu jany mieli nievialikuju pieravahu ŭ biaskoncych vojnach pamiž haradami, trochi daŭžej utrymvajučy vojski ŭ pole boju, trochi chutčej adnaŭlajučy siły paśla parazy. Niekatoryja z susiedziaŭ zjadnalisia ź imi; inšyja byli zachopleny. Urešcie kalradyjcy sfarmavali Impieryju, jakaja pieratvaryłasia ŭ manarchiju ŭva ŭsim, aproč nazvy. Ich lidary bolej nia zjaŭlajucca viadomymi hramadzianskimi starostami, a zjaŭlajucca bujnymi ziemleŭłaśnikami z ziemlami raskidanymi pa ŭsim kantyniencie. Udarnaja siła ich vojskaŭ - heta ŭžo nie hramadzianskaja piachota, a ciažkabraniavanyja katafrakty z bahataj śvitaj. Ale jany pa-raniejšamu vielmi surjozna staviacca da svaich hramadzianskich tradycyj, vieračy, što kalradyjski ideał moža zjadnać kantynient u miry, kali tolki «barbary» za rubiažami ich miežaŭ pahodziacca padnačalicca im." />
+    <string id="X0kKBzsW" text="Kalradyjcy - narod Impieryi,  ale ŭ našy čas jany dali svajo imia ŭsiamu kantynientu, na jakim panujuć. Tysiaču hadoŭ nazad jany byli nia vartym ŭvahi plemiem, što žyło na ŭzhorystaj miascovaści miž Paŭdniovym moram i lasami Battanii. Adna tradycyja adroźnivała ich ad susiedziaŭ - Kalradyjcy nia mieli haspadaroŭ. Ichnija hramadzianie zaŭždy prajaŭlali pavyšanuju cikavaść da majsterstva samakiravańnia, bałansu miž abaronaj voli asoby i patrebnaściami haspadarstva. Mahčyma, mienavita tamu jany mieli maleńkuju pieravahu ŭ biaskoncych vojnach pamiž haradami, trochi daŭžej trymajučy vojski ŭ poli boju, trochi chutčej adnaŭlajučy siły paśla parazy. Niekatoryja susiedzi abjadnalisia ź imi; inšyja byli zachopleny. Urešcie Kalradyjcy sfarmavali Impieryju, jakaja pieratvaryłasia ŭ manarchiju ŭva ŭsim, aproč nazvy. Ichnija lidary bolš nia zjaŭlajucca viadomymi hramadzianskimi starostami, jany - bujnymi ziemleŭłaśniki, z ziemlami raskidanymi pa ŭsim kantyniencie. Udarnaja siła ichnich vojskaŭ - heta ŭžo nie hramadzianskaja piachota, a ciažkabraniavanyja katafrakty z bahataj śvitaj. Ale jany pa-raniejšamu vielmi surjozna staviacca da svaich hramadzianskich tradycyjaŭ, vierać, što Kalradyjski ideał moža abjadnać kantynient u miry, kali tolki «barbary» za ichnimi miežami pahodziacca padnačalicca im." />
     <string id="x1mVOiYC" text="Leatald" />
     <string id="X21PahQn" text="Mienaklis" />
     <string id="X4ZS4q8L" text="Jasna" />
