--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
@@ -8,9 +8,9 @@
     <string id="a1BGHdaU" text="{.Mnozny}Ručnyja Abviazki Achoŭnika" />
     <string id="b2EDkbhD" text="{.Mnozny}Abhortki dla Abarony Ruk" />
     <string id="bxa4JHlU" text="{.Mnozny}Šypavanyja Skuranyja Poručy" />
-    <string id="DOYS7dmq" text="{.Mnozny}Źviazanyja Skuranyja Naručy" />
+    <string id="DOYS7dmq" text="{.Mnozny}Zaciahnutyja Skuranyja Naručy" />
     <string id="dPQGxmJ7" text="{.Mnozny}Uzmocnienyja Kalčužnyja Micienki" />
-    <string id="e4lKZhgv" text="{.Mnozny}Hrubyja Źviazanyja Skuranyja Naručy" />
+    <string id="e4lKZhgv" text="{.Mnozny}Hrubyja Zaciahnutyja Skuranyja Naručy" />
     <string id="fUmehyHq" text="{.Mnozny}Satkanyja Skuranyja Naručy" />
     <string id="g51zVsKU" text="{.Mnozny}Kalčužnyja Micienki" />
     <string id="G8FQ2exX" text="{.Mnozny}Uzmocnienyja Palčatki z Płaścinami" />
@@ -334,15 +334,15 @@
     <string id="2U17pNiY" text="{.Muzcynski}Sielski Hałaŭny Ŭbor" />
     <string id="3bqwOJ8z" text="{.Zanocy}Pierahornutaja Futravaja Šapka" />
     <string id="3DV3GoHb" text="{.Muzcynski}Zavostrany Skałkep z Kalčuhaj" />
-    <string id="3iq3rOh8" text="{.Muzcynski}Kapalin nad Uzbrojenym Koifam" />
+    <string id="3iq3rOh8" text="{.Muzcynski}Kapalin nad Zbrojnym Koifam" />
     <string id="3Q2F2BKD" text="{.Muzcynski}Lohki Miakki Koif" />
     <string id="3UxfT9Bu" text="{.Zanocy}Zahornutaja Skuranaja Šapka" />
-    <string id="3Z91Nxbf" text="{.Muzcynski}Španhienchielm sa Skuraju" />
+    <string id="3Z91Nxbf" text="{.Muzcynski}Španhienchelm sa Skuraju" />
     <string id="4BfbPgkY" text="{.Muzcynski}Cervieljer z Nanośnikam nad Miakkaj Šapkaj" />
     <string id="4n6n3KL7" text="{.Muzcynski}Pustelny Hałaŭny Ŭbor" />
     <string id="4vB2SPZa" text="{.Muzcynski}Karaleŭski Šałom Katafrakta" />
     <string id="4xXPKRpE" text="{.Muzcynski}Šałom Vajskavoda z Piorami" />
-    <string id="51EcVnzd" text="{.Muzcynski}Šałom z Zabrałam nad Šnuravanym Koifam" />
+    <string id="51EcVnzd" text="{.Muzcynski}Šałom z Zasłonaj nad Šnuravanym Koifam" />
     <string id="5c4cHL9Z" text="{.Zanocy}Chuzaickaja Bajavaja Karona" />
     <string id="5kAqcWac" text="{.Muzcynski}Futravy Ablamavany Šałom z Kaštoŭnaściami" />
     <string id="5n4rWI9T" text="{.Muzcynski}Šypaty Šałom z Maskaj" />
@@ -350,7 +350,7 @@
     <string id="6n44BIll" text="{.Muzcynski}Zavostrany Skałkep nad Šnuravanym Koifam" />
     <string id="77RIGK7B" text="{.Muzcynski}Kalčužny Koif" />
     <string id="7D3jvAfS" text="{.Zanocy}Skuranaja Šapka" />
-    <string id="7dAy51ln" text="{.Muzcynski}Cervieljer nad Uzbrojenym Koifam" />
+    <string id="7dAy51ln" text="{.Muzcynski}Cervieljer nad Zbrojnym Koifam" />
     <string id="83qyvGkN" text="{.Muzcynski}Šałom Vajskavoda" />
     <string id="8SNS2wF9" text="{.Muzcynski}Turban" />
     <string id="8tHbqjmB" text="{.Muzcynski}Vostrakancovy Futravy Kaptur" />
@@ -359,15 +359,15 @@
     <string id="9FgxK9se" text="{.Muzcynski}Vysoki Šałom" />
     <string id="9j9fb5pR" text="{.Muzcynski}Płaścinavy Šałom z Bakavoj Abaronaj" />
     <string id="9UJfJrZR" text="{.Muzcynski}Šypaty Kapalin nad Nabiŭkaju" />
-    <string id="A8MJWbhf" text="{.Muzcynski}Šałom z Zabrałam nad Miakkaj Tkańniu" />
+    <string id="A8MJWbhf" text="{.Muzcynski}Šałom z Zasłonaj nad Miakkaj Tkańniu" />
     <string id="AB1mV5Pg" text="{.Muzcynski}Kapalin nad Šnuravanym Koifam" />
     <string id="ac9xJt2X" text="{.Muzcynski}Ciažki Nazalchielm nad Nabiŭkaju" />
     <string id="AdafHtud" text="{.Muzcynski}Vostrakancovy Šałom nad Kalčužnym Koifam" />
-    <string id="agqzAXa9" text="{.Muzcynski}Šałom z Zabrałam nad Miakkim Koifam" />
+    <string id="agqzAXa9" text="{.Muzcynski}Šałom z Zasłonaj nad Miakkim Koifam" />
     <string id="ahN0UNxw" text="{.Muzcynski}Łatunievy Paŭdniovy Šałom z Turbanam" />
     <string id="AK0lNDmN" text="{.Zanocy}Apieranaja Bajavaja Karona z Kaštoŭnaściami" />
     <string id="AoJ4Ztl2" text="{.Muzcynski}Bandycki Skurany Kaptur" />
-    <string id="aoPbMKwB" text="{.Muzcynski}Azdobleny Piorami Španhienchielm nad Kalčuhaj" />
+    <string id="aoPbMKwB" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Kalčuhaj" />
     <string id="aOwcs7Un" text="{.Muzcynski}Kruhły Kapalin nad Skuraju" />
     <string id="aQeOcLX4" text="{.Zanocy}Dvuchzubaja Bronzavaja Karona" />
     <string id="AQIH729X" text="{.Muzcynski}Žalezny Nazalchielm nad Skuraju" />
@@ -392,21 +392,21 @@
     <string id="CHaYjWDb" text="{.Muzcynski}Lohki Kruhły Kapalin nad Skuraju" />
     <string id="cjH1WFwy" text="{.Zanocy}Futravaja Ablamavanaja Šapka" />
     <string id="cQ6IsHSL" text="{.Muzcynski}Žalezny Nazalchielm nad Nabiŭkaju" />
-    <string id="d8DrtmwP" text="{.Muzcynski}Šałom z Zabrałam nad Kalčužnym Koifam" />
+    <string id="d8DrtmwP" text="{.Muzcynski}Šałom z Zasłonaj nad Kalčužnym Koifam" />
     <string id="DbavaIis" text="{.Muzcynski}Žalezny Nazalchielm nad Kalčuhaj" />
     <string id="Dc4ia4m9" text="{.Zanocy}Miakkaja Šapka" />
     <string id="DeawBxbx" text="{.Muzcynski}Šypaty Kapalin nad Kalčuhaj" />
     <string id="dHv9Dbkp" text="{.Muzcynski}Łatunievy Paŭdniovy Šałom z Skuranymi Zasłankami" />
-    <string id="e3nslzlA" text="{.Muzcynski}Azdobleny Piorami Španhienchielm nad Skuraju" />
+    <string id="e3nslzlA" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Skuraju" />
     <string id="E3XTFDXt" text="{.Muzcynski}Šałom z Abaronaj Vačej nad Skuraju" />
     <string id="E5b3gc6R" text="{.Muzcynski}Łatunievy Šałom-Turban z Skuranymi Zasłankami" />
     <string id="e9BpfZ9L" text="{.Muzcynski}Cervieljer nad Tkanymi Hałaŭnymi Abkrutkami" />
-    <string id="ebHdQfbX" text="{.Muzcynski}Španhienchielm z Miakkaj Tkańniu" />
+    <string id="ebHdQfbX" text="{.Muzcynski}Španhienchelm z Miakkaj Tkańniu" />
     <string id="ebPu5G8o" text="{.Muzcynski}Šałom z Kalčuhaj Mamluka" />
     <string id="efW2XbK8" text="{.Muzcynski}Šałom Emira" />
     <string id="EOplBvKz" text="{.Muzcynski}Impierski Apierany Šałom" />
     <string id="EPaqJLSg" text="{.Muzcynski}Šałom-Karona" />
-    <string id="ePdiHF5D" text="{.Muzcynski}Azdobleny Piorami Španhienchielm" />
+    <string id="ePdiHF5D" text="{.Muzcynski}Azdobleny Piorami Španhienchelm" />
     <string id="EWR2MNeM" text="{.Muzcynski}Šałom z Nanośnikam i Kalčuhaj" />
     <string id="ewSpZ10R" text="{.Zanocy}Hrubaja Miakkaja Šapka" />
     <string id="f2awUw9x" text="{.Zanocy}Kalarovaja Kufija" />
@@ -454,7 +454,7 @@
     <string id="N3SgmNxe" text="{.Muzcynski}Hałaŭny Šal" />
     <string id="n7c7tnx9" text="{.Muzcynski}Šałom Vajskavoda z Abaronaj Nosa" />
     <string id="NB9bQt6O" text="{.Muzcynski}Šypaty Šałom z Adkrytym Turban" />
-    <string id="ndfDy5B8" text="{.Mnozny}Źviazanyja Hałaŭnyja Abhortki" />
+    <string id="ndfDy5B8" text="{.Mnozny}Zakručanyja Hałaŭnyja Abhortki" />
     <string id="NEupkuqV" text="{.Zanocy}Pustelnaja Chustka" />
     <string id="NhDpFjF0" text="{.Muzcynski}Uzmocnieny Zakryty Šałom z Abaronaj Vačej" />
     <string id="NiBDR9ld" text="{.Muzcynski}Upryhožany Bronzavy Šałom z Abaronaj Ščok" />
@@ -483,7 +483,7 @@
     <string id="Q50hfNjW" text="{.Muzcynski}Tonki Skurany Koif" />
     <string id="qc0P0b2r" text="{.Muzcynski}Šałom z Abaronaj Vačej nad Kalčuhaj" />
     <string id="qFL0VxZX" text="{.Muzcynski}Šnuravany Koif" />
-    <string id="qojh0tsC" text="{.Muzcynski}Španhienchielm nad Kalčuhaj" />
+    <string id="qojh0tsC" text="{.Muzcynski}Španhienchelm nad Kalčuhaj" />
     <string id="qsVRoGUv" text="{.Muzcynski}Adkryty Hałaŭny Šal" />
     <string id="qVj5NqrL" text="{.Muzcynski}Poŭny Šlem nad Miakkaj Šapkaj" />
     <string id="qxExIHbx" text="{.Muzcynski}Skurany Šypavany Šlem" />
@@ -548,16 +548,16 @@
     <string id="WvDZMmaj" text="{.Muzcynski}Šałom Kačeŭnika" />
     <string id="wvnJzwbU" text="{.Muzcynski}Płaścinavy Šałom Vajskavoda" />
     <string id="wW3iouiU" text="{.Muzcynski}Chidžab" />
-    <string id="WYytQbvS" text="{.Muzcynski}Poŭny Šlem nad Uzbrojenym Koifam" />
+    <string id="WYytQbvS" text="{.Muzcynski}Poŭny Šlem nad Zbrojnym Koifam" />
     <string id="x1kf94SW" text="{.Muzcynski}Rabrysty Šlem" />
     <string id="X1Wn0sBa" text="{.Muzcynski}Ckurany Šypavany Šlem nad Hrubaj Łuskataj" />
     <string id="XCnUaINR" text="{.Muzcynski}Bronzavy Nazalchielm nad Kalčuhaj" />
     <string id="xJTfOqD6" text="{.Muzcynski}Šałom Katafrakta z Abaronaj Vačej" />
     <string id="xnoAJwoy" text="{.Muzcynski}Poŭny Šlem nad Miakkaj Tkańniu" />
-    <string id="xTH3z9Sr" text="{.Muzcynski}Španhienchielm nad Skuraju" />
+    <string id="xTH3z9Sr" text="{.Muzcynski}Španhienchelm nad Skuraju" />
     <string id="XuwQvSDo" text="{.Muzcynski}Žalezny Kruhły Kapalin nad Kalčuhaj" />
     <string id="YDibTDob" text="{.Zanocy}Hornaja Karona-Šałom" />
-    <string id="YFg8x5QC" text="{.Muzcynski}Azdobleny Piorami Španhienchielm nad Koifam" />
+    <string id="YFg8x5QC" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Koifam" />
     <string id="ygfhbfr0" text="{.Muzcynski}Šypaty Šałom" />
     <string id="yMi4ijgI" text="{.Muzcynski}Miakki Kaptur Kačeŭnika" />
     <string id="YQd9C8u2" text="{.Muzcynski}Kapalin nad Miakkim Koifam" />
@@ -591,10 +591,10 @@
     <string id="ApiPJ1NJ" text="{.Muzcynski}Chasnfry{@Plural}Viarbludaŭ Chasnfry{\@}" />
     <string id="aqrJqQqx" text="{.Nijaki}Tkanaje Siadło Bieduina" />
     <string id="avXZdUvi" text="{.Nijaki}Futravaje Siadło" />
-    <string id="awQrcrt2" text="Hančarnyja vyraby{@Plural}skryniaŭ hančarnych vyrabaŭ{\@}" />
+    <string id="awQrcrt2" text="Hančarnyja Vyraby{@Plural}skryniaŭ hančarnych vyrabaŭ{\@}" />
     <string id="b56X0QOh" text="{.Zanocy}Vadarskaja Haračaja Kroŭ{@Plural}Vadarskaj Haračaj Kryvi{\@}" />
     <string id="b5BDaOva" text="{.Muzcynski}Battanijski Konik{@Plural}Battanijskich Konikaŭ{\@}" />
-    <string id="b6JvcSiQ" text="{.Muzcynski}Kot" />
+    <string id="b6JvcSiQ" text="{.Muzcynski}Kotka" />
     <string id="bBGDwuXX" text="{.Muzcynski}Nachasuvi{@Plural}Koniej Nachasuvi{\@}" />
     <string id="BvLhPmdK" text="{.Muzcynski}Haspadarski Destryjer{@Plural}Haspadarskich Destryjeraŭ{\@}" />
     <string id="CB97qhVM" text="{.Muzcynski}Muł" />
@@ -612,7 +612,7 @@
     <string id="FkqbAeoY" text="{.Muzcynski}Śvienrynski Poni{@Plural}Śvienrynskich Poni{\@}" />
     <string id="GD4aQgl7" text="Aviečka{@Plural}aviečak{\@}" />
     <string id="GSiBXOfg" text="{.Muzcynski}Sturhijski Trotter{@Plural}Sturhijskich Trotteraŭ{\@}" />
-    <string id="HAcujhib" text="{.Muzcynski}Viarblud{@Plural}viarbludaŭ{\@}" />
+    <string id="HAcujhib" text="{.Muzcynski}Viarblud{@Plural}Viarbludaŭ{\@}" />
     <string id="he5mGIMh" text="{.Muzcynski}Čardžer{@Plural}Čardžeraŭ{\@}" />
     <string id="HiSzYWeh" text="Piva{@Plural}bondaŭ piva{\@}" />
     <string id="HJriXlcb" text="{.Muzcynski}Uzmocnieny Łancuhova-Kalčužny Bard" />
@@ -624,7 +624,7 @@
     <string id="ItUyYjdd" text="{.Zanocy}Siakiera dla Pakarańnia Śmierciu" />
     <string id="JHef9oad" text="{.Zanocy}Zaprežka Muła z Torbami" />
     <string id="JkxPt29i" text="{.Zanocy}Łancuhovaja Kalčužny Konnaja Brania" />
-    <string id="k3dvbLDi" text="{.Nijaki}Siadło Enieja" />
+    <string id="k3dvbLDi" text="{.Nijaki}Siadło Eneja" />
     <string id="K4uryqOO" text="{.Muzcynski}Battanijski Zavadovy{@Plural}Battanijskich Zavadovych{\@}" />
     <string id="kKuVy1jT" text="{.Muzcynski}Chamsin{@Plural}Koniej Chamsin{\@}" />
     <string id="Kp9kslko" text="{.Muzcynski}Daršyjski Koń{@Plural}Daršyjskich Koniej{\@}" />
@@ -649,7 +649,7 @@
     <string id="P1rL28RT" text="{.Muzcynski}Koń Sampter{@Plural}Koniej Sampter{\@}" />
     <string id="p2jR7Urm" text="{.Nijaki}Tryvałaje Siadło" />
     <string id="pb2ELRZQ" text="{.Muzcynski}Siedłavy Koń{@Plural}Siedłavych Koniej{\@}" />
-    <string id="Pd77RH8P" text="{.Muzcynski}Raŭnsi{@Plural}Koń Raŭnsi{\@}" />
+    <string id="Pd77RH8P" text="{.Muzcynski}Raŭnsi{@Plural}Raŭnsi{\@}" />
     <string id="q1z4FQub" text="{.Nijaki}Siadło Viarbluda" />
     <string id="QGaIYQpg" text="Ryba{@Plural}bondaŭ ryby{\@}" />
     <string id="qNNja5IF" text="{.Muzcynski}Łamielarny Paŭbard" />
@@ -694,7 +694,7 @@
     <string id="6QNQosHv" text="{.Mnozny}Źviazanyja Skuranyja Boty" />
     <string id="9cHyHQ7a" text="{.Mnozny}Łamielarnyja Płaścinkavyja Boty" />
     <string id="9Eyd2qGo" text="{.Mnozny}Uzmocnienyja Zamšavyja Boty" />
-    <string id="aYoIrpe0" text="{.Muzcynski}Źviazany Kalčužny Čusiz" />
+    <string id="aYoIrpe0" text="{.Muzcynski}Zaciahnuty Kalčužny Čusiz" />
     <string id="bFm9jOft" text="{.Mnozny}Skuranyja Boty z Pojasam" />
     <string id="D9JrTpwU" text="{.Mnozny}Skryŭlenyja Boty" />
     <string id="DhHBBpPf" text="{.Mnozny}Prostyja Skuranyja Boty" />
@@ -708,14 +708,14 @@
     <string id="jVK5B86k" text="{.Mnozny}Futravyja Boty" />
     <string id="Kgnm0FkE" text="{.Zanocy}Skuranyja Tufli" />
     <string id="L7qYlJqn" text="{.Mnozny}Lasnyja Boty" />
-    <string id="LOPavWRp" text="{.Mnozny}Źviazanyja Tufli" />
+    <string id="LOPavWRp" text="{.Mnozny}Zaciahnutyja Tufli" />
     <string id="oEvhhNNR" text="{.Mnozny}Skuranyja Boty Kavalera" />
     <string id="oH8iFEv7" text="{.Mnozny}Zahnutyja Haradzkija Boty" />
     <string id="Oo0baNaq" text="{.Mnozny}Hrubyja Źviazanyja Boty" />
     <string id="RU2EppgI" text="{.Mnozny}Tufli Šlachianki" />
     <string id="SxqSJK8h" text="{.Mnozny}Makasiny" />
     <string id="Szuxa9Bs" text="{.Mnozny}Irvanyja Boty" />
-    <string id="tMwsE9IR" text="{.Mnozny}Źviazanyja Skuranyja Boty" />
+    <string id="tMwsE9IR" text="{.Mnozny}Zaciahnutyja Skuranyja Boty" />
     <string id="tWfAPrPa" text="{.Mnozny}Kalčužnyja Boty Kavalera" />
     <string id="uUGAMReu" text="{.Mnozny}Vydatnyja Haradzkija Boty" />
     <string id="UuWPfE1x" text="{.Mnozny}Łuskatyja Boty" />
@@ -901,7 +901,7 @@
     <string id="hyagO05b" text="{.Muzcynski}Sparynhavy Tarč" />
     <string id="Kba6rxWK" text="{.Muzcynski}Sparynhavy Bułat" />
     <string id="lGHrlYqQ" text="{.Muzcynski}Sparynhavy Dvuchručnik" />
-    <string id="LLaFEt1m" text="{.Muzcynski}Sparynhavy Uzbrojeny Mieč" />
+    <string id="LLaFEt1m" text="{.Muzcynski}Sparynhavy Zbrojny Mieč" />
     <string id="LpN4YWb2" text="{.Zanocy}Sparynhavaja Šabla" />
     <string id="lW3smDRu" text="{.Muzcynski}Sparynhavy Ščyt-Kropla" />
     <string id="M75Ybg6r" text="{.Mnozny}Sparynhavyja Kidalnyja Siakiery" />
@@ -952,7 +952,7 @@
     <string id="89OWzLBb" text="{.Zanocy}Siakiera-Aśsija z Bambukavaj Ručkaj" />
     <string id="8fK5E68M" text="{.Zanocy}Rabrystaja Šabla " />
     <string id="8jEDX9J4" text="{.Muzcynski}Šyroki Mieč" />
-    <string id="8mpp8ZCL" text="{.Muzcynski}Rycarski Uzbrojeny Mieč" />
+    <string id="8mpp8ZCL" text="{.Muzcynski}Rycarski Zbrojny Mieč" />
     <string id="8pnCvnFR" text="{.Muzcynski}Stalovy Šastapior" />
     <string id="93OHSnEV" text="{.Muzcynski}Upryhožany Doŭhi Bułat" />
     <string id="9EWN9SiT" text="{.Muzcynski}Lohki Šyšpar" />
@@ -968,7 +968,7 @@
     <string id="AOZbTGOS" text="{.Muzcynski}Ksifas" />
     <string id="arBdK7st" text="{.Muzcynski}Prosty Mieč Bastarda" />
     <string id="b88lWWOo" text="{.Zanocy}Vydatnaja Stalovaja Bułava" />
-    <string id="b8AgXwbL" text="{.Muzcynski}Šyroki Uzbrojeny Mieč" />
+    <string id="b8AgXwbL" text="{.Muzcynski}Šyroki Zbrojny Mieč" />
     <string id="bANXyotg" text="{.Muzcynski}Trochi Rabrystaja Flissa" />
     <string id="BAsjzOiH" text="{.Zanocy}Siakiera Kata" />
     <string id="bcjcw1o9" text="{.Zanocy}Lasnaja Siakiera-Kałun" />
@@ -1034,7 +1034,7 @@
     <string id="h1jKICdp" text="{.Muzcynski}Prosty Karotki Łuk" />
     <string id="h60wQVVX" text="{.Zanocy}Pika" />
     <string id="H9hzBJz3" text="{.Nijaki}Kapjo dla Praktycy" />
-    <string id="ha3rVEzP" text="{.Muzcynski}Rabrysty Zmočany Uzbrojeny Mieč" />
+    <string id="ha3rVEzP" text="{.Muzcynski}Rabrysty Zmočany Zbrojny Mieč" />
     <string id="habJjtmv" text="{.Muzcynski}Rabrysty Žalezny Šyroki Mieč" />
     <string id="HaK3y9yi" text="{.Muzcynski}Šypaty Dubiec" />
     <string id="HclLXEaT" text="{.Zanocy}Konskaja Puha" />
@@ -1080,7 +1080,7 @@
     <string id="kR1blV2k" text="{.Mnozny}Zazubranyja Vajarskija Viły" />
     <string id="KRhIG1cw" text="{.Zanocy}Vializarnaja Siakiera-Francyska" />
     <string id="KRuZuMFI" text="{.Nijaki}Prysud" />
-    <string id="ksxylfU4" text="{.Muzcynski}Rabrysty Uzbrojeny Mieč" />
+    <string id="ksxylfU4" text="{.Muzcynski}Rabrysty Zbrojny Mieč" />
     <string id="KTegaNPW" text="{.Muzcynski}Doŭhi Łuk" />
     <string id="ktJ6crBs" text="{.Muzcynski}Šyroki Falkian" />
     <string id="Kv4zAMIh" text="{.Zanocy}Bułava Katafrakta" />
@@ -1115,7 +1115,7 @@
     <string id="oQmUlQWp" text="{.Zanocy}Prostaja Šabla " />
     <string id="oV5AhcDl" text="{.Mnozny}Drotyki z Nizinaŭ" />
     <string id="oXrbTRJo" text="{.Zanocy}Žniec" />
-    <string id="P9FUrH8a" text="{.Muzcynski}Załaty Hravieravany Uzbrojeny Mieč" />
+    <string id="P9FUrH8a" text="{.Muzcynski}Załaty Hravieravany Zbrojny Mieč" />
     <string id="P9PcIk4q" text="{.Zanocy}Krukavataja Siakiera Vieršnika" />
     <string id="PBLsXDgP" text="{.Zanocy}Lohkaja Bułava" />
     <string id="pjvwuVuc" text="{.Zanocy}Adnaručnaja Aściukavataja Siakiera" />
@@ -1164,7 +1164,7 @@
     <string id="UWvOndG0" text="{.Zanocy}Lohkaja Stepavaja Dzida Najeźnika" />
     <string id="V4b2ZRTH" text="{.Zanocy}Romfeja" />
     <string id="v7WQhge3" text="{.Zanocy}Upryhožanaja Šabla" />
-    <string id="VAcSEseI" text="{.Muzcynski}Šyroki Uzbrojeny Mieč z Šyrokim Dołam" />
+    <string id="VAcSEseI" text="{.Muzcynski}Šyroki Zbrojny Mieč z Šyrokim Dołam" />
     <string id="VAO11FSu" text="{.Muzcynski}Tamaskinski Stalovy Dvuchručnik" />
     <string id="vDvj5zkG" text="{.Zanocy}Lutaść Vietru" />
     <string id="vmz4vfu5" text="{.Mnozny}Krukavatyja Drotyki" />
@@ -1174,7 +1174,7 @@
     <string id="vXYlLH6L" text="{.Nijaki}Doŭhaje Tamaskinskaje Zmočanaje Kapjo" />
     <string id="Vyw5KNxR" text="{.Nijaki}Karotkaje Kapjo Rušeńnia" />
     <string id="w6EU77OH" text="{.Muzcynski}Stepavy Zahnuty Nazad Łuk" />
-    <string id="w9RLq82l" text="{.Muzcynski}Žalezny Uzbrojeny Mieč" />
+    <string id="w9RLq82l" text="{.Muzcynski}Žalezny Zbrojny Mieč" />
     <string id="WASZXuec" text="{.Muzcynski}Piarnač Rušeńnia" />
     <string id="wfhHGTbl" text="{.Muzcynski}Stepavy Vajskovy Łuk" />
     <string id="wi53b5PG" text="{.Mnozny}Ciažkija Bałty" />
@@ -1206,13 +1206,13 @@
     <string id="Z6Ak3H6G" text="{.Muzcynski}Džarejd" />
     <string id="zbsajPMp" text="{.Muzcynski}Vulž" />
     <string id="zBUT90xQ" text="{.Zanocy}Tamaskinskaja Stalovaja Kaskara" />
-    <string id="Zcaucj4W" text="{.Zanocy}Upryhožanaja Uzbrojeny Mieč" />
+    <string id="Zcaucj4W" text="{.Zanocy}Upryhožanaja Zbrojny Mieč" />
     <string id="ZeU1fvdz" text="{.Zanocy}Hruda Bujnaj Karciečy" />
     <string id="ZFwKlHIJ" text="{.Muzcynski}Lasny Doŭhi Łuk" />
     <string id="zH0QF7mE" text="{.Nijaki}Hierbavaje Kapjo z Vystupam i Rušami" />
     <string id="ZLpYFYXo" text="{.Nijaki}Zazubranaje Vydatnaje Stalovaje Kapjo" />
     <string id="ZQv5Bcl2" text="{.Muzcynski}Łuk Surodziča" />
-    <string id="ZsaukY0N" text="{.Muzcynski}Uzbrojeny Mieč z Kruham" />
+    <string id="ZsaukY0N" text="{.Muzcynski}Zbrojny Mieč z Kruham" />
     <string id="zUFRE9y4" text="{.Zanocy}Kirka" />
     <string id="zvIax8Kt" text="{.Muzcynski}Kidalny Nož z Nizinaŭ" />
   </strings>
