--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_bandits_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_bandits_xml_by.xml
@@ -13,14 +13,14 @@
     <string id="cdbSCr6G" text="Харамі" />
     <string id="dc2qxanZ" text="Верхавод Лясных Бандытаў" />
     <string id="dq2cP8h0" text="Марскі Налётнік" />
-    <string id="freebootertroop" text="Вольнаногі" />
+    <string id="freebootertroop" text="Босаногі" />
     <string id="HadsURl8" text="Куставы Лайдак" />
     <string id="J6Yksji5" text="Конны Рабаўнік" />
     <string id="Nr8NkHXU" text="Марскі Налётнік-Ваяр" />
     <string id="P6Md9DpR" text="Прыдарожны Грабежнік" />
     <string id="Q2V4uQrr" text="Верхавод Пустэльных Бандытаў" />
     <string id="sFgODQ1q" text="Лясны Бандыт" />
-    <string id="uOAnHN47" text="Бедуін-Вандроўнік" />
+    <string id="uOAnHN47" text="Бедуін-Падарожнік" />
     <string id="urUwa4bf" text="Рабаўнік" />
     <string id="ZA4bgJ5V" text="Стэпавы Бандыт" />
     <string id="ziOBJSzR" text="Верхавод Горных Бандытаў" />
