--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spcultures_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spcultures_xml_by.xml
@@ -288,7 +288,7 @@
     <string id="DaCppjI9" text="Ульпа" />
     <string id="DakafAXa" text="Замантовінг" />
     <string id="daulkQvv" text="Брынія" />
-    <string id="DBHAFW5k" text="Асрык" />
+    <string id="DBHAFW5k" text="Озрык" />
     <string id="dey9d9DX" text="Касёвінг" />
     <string id="dFHXmyaj" text="Тандрэд" />
     <string id="DfZ5oi0O" text="Рагна" />
@@ -896,7 +896,7 @@
     <string id="WuMGWUJ7" text="Аддыён" />
     <string id="wvLyCxZz" text="Альвард" />
     <string id="wYPWlhme" text="Зандзіна" />
-    <string id="X0kKBzsW" text="Кальрадыйцы - гэта народ Імперыі, але ў нашы час яны далі сваё імя ўсяму кантыненту, над якім яны дамінуюць. Тысячу гадоў назад яны былі ня вартым ўвагі племем, што жыло на ўзгорыстай мясцовасьці паміж паўднёвым морам і лясамі Баттаніі. Адна традыцыя адзьдзяляла іх ад сваіх суседзяў: у кальрадыйцаў не было гаспадароў. Іх грамадзяне заўсёды праяўлялі вялікую цікавасьць да майстэрства самакіраваньня, балансуючы паміж абаронай свабоды індывідуальнасьці і патрэбнасьцямі гаспадарства. Магчыма, менавіта таму яны мелі невялікую перавагу ў бясконцых войнах паміж гарадамі, трохі даўжэй утрымваючы войскі ў поле бою, трохі хутчэй аднаўляючы сілы пасьля паразы. Некаторыя з суседзяў з'ядналіся зь імі; іншыя былі захоплены. Урэшце кальрадыйцы сфармавалі Імперыю, якая ператварылася ў манархію ўва ўсім, апроч назвы. Іх лідары болей ня з'яўляюцца вядомымі грамадзянскімі старостамі, а з'яўляюцца буйнымі землеўласьнікамі з землямі раскіданымі па ўсім кантыненце. Ударная сіла іх войскаў - гэта ўжо не грамадзянская пяхота, а цяжкабраняваныя катафракты з багатай сьвітай. Але яны па-ранейшаму вельмі сур'ёзна ставяцца да сваіх грамадзянскіх традыцый, верачы, што кальрадыйскі ідэал можа з'яднаць кантынент у міры, калі толькі «барбары» за рубяжамі іх межаў пагодзяцца падначаліцца ім." />
+    <string id="X0kKBzsW" text="Кальрадыйцы - народ Імперыі,  але ў нашы час яны далі сваё імя ўсяму кантыненту, на якім пануюць. Тысячу гадоў назад яны былі ня вартым ўвагі племем, што жыло на ўзгорыстай мясцовасьці між Паўднёвым морам і лясамі Баттаніі. Адна традыцыя адрозьнівала іх ад суседзяў - Кальрадыйцы ня мелі гаспадароў. Іхнія грамадзяне заўжды праяўлялі павышаную цікавасьць да майстэрства самакіраваньня, балансу між абаронай волі асобы і патрэбнасьцямі гаспадарства. Магчыма, менавіта таму яны мелі маленькую перавагу ў бясконцых войнах паміж гарадамі, трохі даўжэй трымаючы войскі ў полі бою, трохі хутчэй аднаўляючы сілы пасьля паразы. Некаторыя суседзі аб'ядналіся зь імі; іншыя былі захоплены. Урэшце Кальрадыйцы сфармавалі Імперыю, якая ператварылася ў манархію ўва ўсім, апроч назвы. Іхнія лідары больш ня з'яўляюцца вядомымі грамадзянскімі старостамі, яны - буйнымі землеўласьнікі, з землямі раскіданымі па ўсім кантыненце. Ударная сіла іхніх войскаў - гэта ўжо не грамадзянская пяхота, а цяжкабраняваныя катафракты з багатай сьвітай. Але яны па-ранейшаму вельмі сур'ёзна ставяцца да сваіх грамадзянскіх традыцыяў, вераць, што Кальрадыйскі ідэал можа аб'яднаць кантынент у міры, калі толькі «барбары» за іхнімі межамі пагодзяцца падначаліцца ім." />
     <string id="x1mVOiYC" text="Леатальд" />
     <string id="X21PahQn" text="Менакліс" />
     <string id="X4ZS4q8L" text="Ясна" />
