--- a/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.7/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
@@ -8,9 +8,9 @@
     <string id="a1BGHdaU" text="{.Mnozny}Ручныя Абвязкі Ахоўніка" />
     <string id="b2EDkbhD" text="{.Mnozny}Абгорткі для Абароны Рук" />
     <string id="bxa4JHlU" text="{.Mnozny}Шыпаваныя Скураныя Поручы" />
-    <string id="DOYS7dmq" text="{.Mnozny}Зьвязаныя Скураныя Наручы" />
+    <string id="DOYS7dmq" text="{.Mnozny}Зацягнутыя Скураныя Наручы" />
     <string id="dPQGxmJ7" text="{.Mnozny}Узмоцненыя Кальчужныя Міценкі" />
-    <string id="e4lKZhgv" text="{.Mnozny}Грубыя Зьвязаныя Скураныя Наручы" />
+    <string id="e4lKZhgv" text="{.Mnozny}Грубыя Зацягнутыя Скураныя Наручы" />
     <string id="fUmehyHq" text="{.Mnozny}Сатканыя Скураныя Наручы" />
     <string id="g51zVsKU" text="{.Mnozny}Кальчужныя Міценкі" />
     <string id="G8FQ2exX" text="{.Mnozny}Узмоцненыя Пальчаткі з Пласьцінамі" />
@@ -334,15 +334,15 @@
     <string id="2U17pNiY" text="{.Muzcynski}Сельскі Галаўны Ўбор" />
     <string id="3bqwOJ8z" text="{.Zanocy}Перагорнутая Футравая Шапка" />
     <string id="3DV3GoHb" text="{.Muzcynski}Завостраны Скалкэп з Кальчугай" />
-    <string id="3iq3rOh8" text="{.Muzcynski}Капалін над Узброеным Коіфам" />
+    <string id="3iq3rOh8" text="{.Muzcynski}Капалін над Збройным Коіфам" />
     <string id="3Q2F2BKD" text="{.Muzcynski}Лёгкі Мяккі Коіф" />
     <string id="3UxfT9Bu" text="{.Zanocy}Загорнутая Скураная Шапка" />
-    <string id="3Z91Nxbf" text="{.Muzcynski}Шпангенхельм са Скураю" />
+    <string id="3Z91Nxbf" text="{.Muzcynski}Шпангенхэльм са Скураю" />
     <string id="4BfbPgkY" text="{.Muzcynski}Цэрвельер з Наносьнікам над Мяккай Шапкай" />
     <string id="4n6n3KL7" text="{.Muzcynski}Пустэльны Галаўны Ўбор" />
     <string id="4vB2SPZa" text="{.Muzcynski}Каралеўскі Шалом Катафракта" />
     <string id="4xXPKRpE" text="{.Muzcynski}Шалом Вайскавода з Пёрамі" />
-    <string id="51EcVnzd" text="{.Muzcynski}Шалом з Забралам над Шнураваным Коіфам" />
+    <string id="51EcVnzd" text="{.Muzcynski}Шалом з Заслонай над Шнураваным Коіфам" />
     <string id="5c4cHL9Z" text="{.Zanocy}Хузаіцкая Баявая Карона" />
     <string id="5kAqcWac" text="{.Muzcynski}Футравы Аблямаваны Шалом з Каштоўнасьцямі" />
     <string id="5n4rWI9T" text="{.Muzcynski}Шыпаты Шалом з Маскай" />
@@ -350,7 +350,7 @@
     <string id="6n44BIll" text="{.Muzcynski}Завостраны Скалкэп над Шнураваным Коіфам" />
     <string id="77RIGK7B" text="{.Muzcynski}Кальчужны Коіф" />
     <string id="7D3jvAfS" text="{.Zanocy}Скураная Шапка" />
-    <string id="7dAy51ln" text="{.Muzcynski}Цэрвельер над Узброеным Коіфам" />
+    <string id="7dAy51ln" text="{.Muzcynski}Цэрвельер над Збройным Коіфам" />
     <string id="83qyvGkN" text="{.Muzcynski}Шалом Вайскавода" />
     <string id="8SNS2wF9" text="{.Muzcynski}Турбан" />
     <string id="8tHbqjmB" text="{.Muzcynski}Востраканцовы Футравы Каптур" />
@@ -359,15 +359,15 @@
     <string id="9FgxK9se" text="{.Muzcynski}Высокі Шалом" />
     <string id="9j9fb5pR" text="{.Muzcynski}Пласьцінавы Шалом з Бакавой Абаронай" />
     <string id="9UJfJrZR" text="{.Muzcynski}Шыпаты Капалін над Набіўкаю" />
-    <string id="A8MJWbhf" text="{.Muzcynski}Шалом з Забралам над Мяккай Тканьню" />
+    <string id="A8MJWbhf" text="{.Muzcynski}Шалом з Заслонай над Мяккай Тканьню" />
     <string id="AB1mV5Pg" text="{.Muzcynski}Капалін над Шнураваным Коіфам" />
     <string id="ac9xJt2X" text="{.Muzcynski}Цяжкі Назальхельм над Набіўкаю" />
     <string id="AdafHtud" text="{.Muzcynski}Востраканцовы Шалом над Кальчужным Коіфам" />
-    <string id="agqzAXa9" text="{.Muzcynski}Шалом з Забралам над Мяккім Коіфам" />
+    <string id="agqzAXa9" text="{.Muzcynski}Шалом з Заслонай над Мяккім Коіфам" />
     <string id="ahN0UNxw" text="{.Muzcynski}Латуневы Паўднёвы Шалом з Турбанам" />
     <string id="AK0lNDmN" text="{.Zanocy}Апераная Баявая Карона з Каштоўнасьцямі" />
     <string id="AoJ4Ztl2" text="{.Muzcynski}Бандыцкі Скураны Каптур" />
-    <string id="aoPbMKwB" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм над Кальчугай" />
+    <string id="aoPbMKwB" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Кальчугай" />
     <string id="aOwcs7Un" text="{.Muzcynski}Круглы Капалін над Скураю" />
     <string id="aQeOcLX4" text="{.Zanocy}Двухзубая Бронзавая Карона" />
     <string id="AQIH729X" text="{.Muzcynski}Жалезны Назальхельм над Скураю" />
@@ -392,21 +392,21 @@
     <string id="CHaYjWDb" text="{.Muzcynski}Лёгкі Круглы Капалін над Скураю" />
     <string id="cjH1WFwy" text="{.Zanocy}Футравая Аблямаваная Шапка" />
     <string id="cQ6IsHSL" text="{.Muzcynski}Жалезны Назальхельм над Набіўкаю" />
-    <string id="d8DrtmwP" text="{.Muzcynski}Шалом з Забралам над Кальчужным Коіфам" />
+    <string id="d8DrtmwP" text="{.Muzcynski}Шалом з Заслонай над Кальчужным Коіфам" />
     <string id="DbavaIis" text="{.Muzcynski}Жалезны Назальхельм над Кальчугай" />
     <string id="Dc4ia4m9" text="{.Zanocy}Мяккая Шапка" />
     <string id="DeawBxbx" text="{.Muzcynski}Шыпаты Капалін над Кальчугай" />
     <string id="dHv9Dbkp" text="{.Muzcynski}Латуневы Паўднёвы Шалом з Скуранымі Засланкамі" />
-    <string id="e3nslzlA" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм над Скураю" />
+    <string id="e3nslzlA" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Скураю" />
     <string id="E3XTFDXt" text="{.Muzcynski}Шалом з Абаронай Вачэй над Скураю" />
     <string id="E5b3gc6R" text="{.Muzcynski}Латуневы Шалом-Турбан з Скуранымі Засланкамі" />
     <string id="e9BpfZ9L" text="{.Muzcynski}Цэрвельер над Тканымі Галаўнымі Абкруткамі" />
-    <string id="ebHdQfbX" text="{.Muzcynski}Шпангенхельм з Мяккай Тканьню" />
+    <string id="ebHdQfbX" text="{.Muzcynski}Шпангенхэльм з Мяккай Тканьню" />
     <string id="ebPu5G8o" text="{.Muzcynski}Шалом з Кальчугай Мамлюка" />
     <string id="efW2XbK8" text="{.Muzcynski}Шалом Эміра" />
     <string id="EOplBvKz" text="{.Muzcynski}Імперскі Апераны Шалом" />
     <string id="EPaqJLSg" text="{.Muzcynski}Шалом-Карона" />
-    <string id="ePdiHF5D" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм" />
+    <string id="ePdiHF5D" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм" />
     <string id="EWR2MNeM" text="{.Muzcynski}Шалом з Наносьнікам і Кальчугай" />
     <string id="ewSpZ10R" text="{.Zanocy}Грубая Мяккая Шапка" />
     <string id="f2awUw9x" text="{.Zanocy}Каляровая Куфія" />
@@ -454,7 +454,7 @@
     <string id="N3SgmNxe" text="{.Muzcynski}Галаўны Шаль" />
     <string id="n7c7tnx9" text="{.Muzcynski}Шалом Вайскавода з Абаронай Носа" />
     <string id="NB9bQt6O" text="{.Muzcynski}Шыпаты Шалом з Адкрытым Турбан" />
-    <string id="ndfDy5B8" text="{.Mnozny}Зьвязаныя Галаўныя Абгорткі" />
+    <string id="ndfDy5B8" text="{.Mnozny}Закручаныя Галаўныя Абгорткі" />
     <string id="NEupkuqV" text="{.Zanocy}Пустэльная Хустка" />
     <string id="NhDpFjF0" text="{.Muzcynski}Узмоцнены Закрыты Шалом з Абаронай Вачэй" />
     <string id="NiBDR9ld" text="{.Muzcynski}Упрыгожаны Бронзавы Шалом з Абаронай Шчок" />
@@ -483,7 +483,7 @@
     <string id="Q50hfNjW" text="{.Muzcynski}Тонкі Скураны Коіф" />
     <string id="qc0P0b2r" text="{.Muzcynski}Шалом з Абаронай Вачэй над Кальчугай" />
     <string id="qFL0VxZX" text="{.Muzcynski}Шнураваны Коіф" />
-    <string id="qojh0tsC" text="{.Muzcynski}Шпангенхельм над Кальчугай" />
+    <string id="qojh0tsC" text="{.Muzcynski}Шпангенхэльм над Кальчугай" />
     <string id="qsVRoGUv" text="{.Muzcynski}Адкрыты Галаўны Шаль" />
     <string id="qVj5NqrL" text="{.Muzcynski}Поўны Шлем над Мяккай Шапкай" />
     <string id="qxExIHbx" text="{.Muzcynski}Скураны Шыпаваны Шлем" />
@@ -548,16 +548,16 @@
     <string id="WvDZMmaj" text="{.Muzcynski}Шалом Качэўніка" />
     <string id="wvnJzwbU" text="{.Muzcynski}Пласьцінавы Шалом Вайскавода" />
     <string id="wW3iouiU" text="{.Muzcynski}Хіджаб" />
-    <string id="WYytQbvS" text="{.Muzcynski}Поўны Шлем над Узброеным Коіфам" />
+    <string id="WYytQbvS" text="{.Muzcynski}Поўны Шлем над Збройным Коіфам" />
     <string id="x1kf94SW" text="{.Muzcynski}Рабрысты Шлем" />
     <string id="X1Wn0sBa" text="{.Muzcynski}Cкураны Шыпаваны Шлем над Грубай Лускатай" />
     <string id="XCnUaINR" text="{.Muzcynski}Бронзавы Назальхельм над Кальчугай" />
     <string id="xJTfOqD6" text="{.Muzcynski}Шалом Катафракта з Абаронай Вачэй" />
     <string id="xnoAJwoy" text="{.Muzcynski}Поўны Шлем над Мяккай Тканьню" />
-    <string id="xTH3z9Sr" text="{.Muzcynski}Шпангенхельм над Скураю" />
+    <string id="xTH3z9Sr" text="{.Muzcynski}Шпангенхэльм над Скураю" />
     <string id="XuwQvSDo" text="{.Muzcynski}Жалезны Круглы Капалін над Кальчугай" />
     <string id="YDibTDob" text="{.Zanocy}Горная Карона-Шалом" />
-    <string id="YFg8x5QC" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхельм над Коіфам" />
+    <string id="YFg8x5QC" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Коіфам" />
     <string id="ygfhbfr0" text="{.Muzcynski}Шыпаты Шалом" />
     <string id="yMi4ijgI" text="{.Muzcynski}Мяккі Каптур Качэўніка" />
     <string id="YQd9C8u2" text="{.Muzcynski}Капалін над Мяккім Коіфам" />
@@ -591,10 +591,10 @@
     <string id="ApiPJ1NJ" text="{.Muzcynski}Хаснфры{@Plural}Вярблюдаў Хаснфры{\@}" />
     <string id="aqrJqQqx" text="{.Nijaki}Тканае Сядло Бедуіна" />
     <string id="avXZdUvi" text="{.Nijaki}Футравае Сядло" />
-    <string id="awQrcrt2" text="Ганчарныя вырабы{@Plural}скрыняў ганчарных вырабаў{\@}" />
+    <string id="awQrcrt2" text="Ганчарныя Вырабы{@Plural}скрыняў ганчарных вырабаў{\@}" />
     <string id="b56X0QOh" text="{.Zanocy}Вадарская Гарачая Кроў{@Plural}Вадарскай Гарачай Крыві{\@}" />
     <string id="b5BDaOva" text="{.Muzcynski}Баттанійскі Конік{@Plural}Баттанійскіх Конікаў{\@}" />
-    <string id="b6JvcSiQ" text="{.Muzcynski}Кот" />
+    <string id="b6JvcSiQ" text="{.Muzcynski}Котка" />
     <string id="bBGDwuXX" text="{.Muzcynski}Нахасуві{@Plural}Коней Нахасуві{\@}" />
     <string id="BvLhPmdK" text="{.Muzcynski}Гаспадарскі Дэстрыер{@Plural}Гаспадарскіх Дэстрыераў{\@}" />
     <string id="CB97qhVM" text="{.Muzcynski}Мул" />
@@ -612,7 +612,7 @@
     <string id="FkqbAeoY" text="{.Muzcynski}Сьвенрынскі Поні{@Plural}Сьвенрынскіх Поні{\@}" />
     <string id="GD4aQgl7" text="Авечка{@Plural}авечак{\@}" />
     <string id="GSiBXOfg" text="{.Muzcynski}Стургійскі Троттэр{@Plural}Стургійскіх Троттэраў{\@}" />
-    <string id="HAcujhib" text="{.Muzcynski}Вярблюд{@Plural}вярблюдаў{\@}" />
+    <string id="HAcujhib" text="{.Muzcynski}Вярблюд{@Plural}Вярблюдаў{\@}" />
     <string id="he5mGIMh" text="{.Muzcynski}Чарджэр{@Plural}Чарджэраў{\@}" />
     <string id="HiSzYWeh" text="Піва{@Plural}бондаў піва{\@}" />
     <string id="HJriXlcb" text="{.Muzcynski}Узмоцнены Ланцугова-Кальчужны Бард" />
@@ -624,7 +624,7 @@
     <string id="ItUyYjdd" text="{.Zanocy}Сякера для Пакараньня Сьмерцю" />
     <string id="JHef9oad" text="{.Zanocy}Запрэжка Мула з Торбамі" />
     <string id="JkxPt29i" text="{.Zanocy}Ланцуговая Кальчужны Конная Браня" />
-    <string id="k3dvbLDi" text="{.Nijaki}Сядло Энея" />
+    <string id="k3dvbLDi" text="{.Nijaki}Сядло Энэя" />
     <string id="K4uryqOO" text="{.Muzcynski}Баттанійскі Завадовы{@Plural}Баттанійскіх Завадовых{\@}" />
     <string id="kKuVy1jT" text="{.Muzcynski}Хамсін{@Plural}Коней Хамсін{\@}" />
     <string id="Kp9kslko" text="{.Muzcynski}Даршыйскі Конь{@Plural}Даршыйскіх Коней{\@}" />
@@ -649,7 +649,7 @@
     <string id="P1rL28RT" text="{.Muzcynski}Конь Самптэр{@Plural}Коней Самптэр{\@}" />
     <string id="p2jR7Urm" text="{.Nijaki}Трывалае Сядло" />
     <string id="pb2ELRZQ" text="{.Muzcynski}Седлавы Конь{@Plural}Седлавых Коней{\@}" />
-    <string id="Pd77RH8P" text="{.Muzcynski}Раўнсі{@Plural}Конь Раўнсі{\@}" />
+    <string id="Pd77RH8P" text="{.Muzcynski}Раўнсі{@Plural}Раўнсі{\@}" />
     <string id="q1z4FQub" text="{.Nijaki}Сядло Вярблюда" />
     <string id="QGaIYQpg" text="Рыба{@Plural}бондаў рыбы{\@}" />
     <string id="qNNja5IF" text="{.Muzcynski}Ламелярны Паўбард" />
@@ -694,7 +694,7 @@
     <string id="6QNQosHv" text="{.Mnozny}Зьвязаныя Скураныя Боты" />
     <string id="9cHyHQ7a" text="{.Mnozny}Ламелярныя Пласьцінкавыя Боты" />
     <string id="9Eyd2qGo" text="{.Mnozny}Узмоцненыя Замшавыя Боты" />
-    <string id="aYoIrpe0" text="{.Muzcynski}Зьвязаны Кальчужны Чусіз" />
+    <string id="aYoIrpe0" text="{.Muzcynski}Зацягнуты Кальчужны Чусіз" />
     <string id="bFm9jOft" text="{.Mnozny}Скураныя Боты з Поясам" />
     <string id="D9JrTpwU" text="{.Mnozny}Скрыўленыя Боты" />
     <string id="DhHBBpPf" text="{.Mnozny}Простыя Скураныя Боты" />
@@ -708,14 +708,14 @@
     <string id="jVK5B86k" text="{.Mnozny}Футравыя Боты" />
     <string id="Kgnm0FkE" text="{.Zanocy}Скураныя Туфлі" />
     <string id="L7qYlJqn" text="{.Mnozny}Лясныя Боты" />
-    <string id="LOPavWRp" text="{.Mnozny}Зьвязаныя Туфлі" />
+    <string id="LOPavWRp" text="{.Mnozny}Зацягнутыя Туфлі" />
     <string id="oEvhhNNR" text="{.Mnozny}Скураныя Боты Кавалера" />
     <string id="oH8iFEv7" text="{.Mnozny}Загнутыя Гарадзкія Боты" />
     <string id="Oo0baNaq" text="{.Mnozny}Грубыя Зьвязаныя Боты" />
     <string id="RU2EppgI" text="{.Mnozny}Туфлі Шляхянкі" />
     <string id="SxqSJK8h" text="{.Mnozny}Макасіны" />
     <string id="Szuxa9Bs" text="{.Mnozny}Ірваныя Боты" />
-    <string id="tMwsE9IR" text="{.Mnozny}Зьвязаныя Скураныя Боты" />
+    <string id="tMwsE9IR" text="{.Mnozny}Зацягнутыя Скураныя Боты" />
     <string id="tWfAPrPa" text="{.Mnozny}Кальчужныя Боты Кавалера" />
     <string id="uUGAMReu" text="{.Mnozny}Выдатныя Гарадзкія Боты" />
     <string id="UuWPfE1x" text="{.Mnozny}Лускатыя Боты" />
@@ -901,7 +901,7 @@
     <string id="hyagO05b" text="{.Muzcynski}Спарынгавы Тарч" />
     <string id="Kba6rxWK" text="{.Muzcynski}Спарынгавы Булат" />
     <string id="lGHrlYqQ" text="{.Muzcynski}Спарынгавы Двухручнік" />
-    <string id="LLaFEt1m" text="{.Muzcynski}Спарынгавы Узброены Меч" />
+    <string id="LLaFEt1m" text="{.Muzcynski}Спарынгавы Збройны Меч" />
     <string id="LpN4YWb2" text="{.Zanocy}Спарынгавая Шабля" />
     <string id="lW3smDRu" text="{.Muzcynski}Спарынгавы Шчыт-Кропля" />
     <string id="M75Ybg6r" text="{.Mnozny}Спарынгавыя Кідальныя Сякеры" />
@@ -952,7 +952,7 @@
     <string id="89OWzLBb" text="{.Zanocy}Сякера-Асьсія з Бамбукавай Ручкай" />
     <string id="8fK5E68M" text="{.Zanocy}Рабрыстая Шабля " />
     <string id="8jEDX9J4" text="{.Muzcynski}Шырокі Меч" />
-    <string id="8mpp8ZCL" text="{.Muzcynski}Рыцарскі Узброены Меч" />
+    <string id="8mpp8ZCL" text="{.Muzcynski}Рыцарскі Збройны Меч" />
     <string id="8pnCvnFR" text="{.Muzcynski}Сталёвы Шастапёр" />
     <string id="93OHSnEV" text="{.Muzcynski}Упрыгожаны Доўгі Булат" />
     <string id="9EWN9SiT" text="{.Muzcynski}Лёгкі Шышпар" />
@@ -968,7 +968,7 @@
     <string id="AOZbTGOS" text="{.Muzcynski}Ксіфас" />
     <string id="arBdK7st" text="{.Muzcynski}Просты Меч Бастарда" />
     <string id="b88lWWOo" text="{.Zanocy}Выдатная Сталёвая Булава" />
-    <string id="b8AgXwbL" text="{.Muzcynski}Шырокі Узброены Меч" />
+    <string id="b8AgXwbL" text="{.Muzcynski}Шырокі Збройны Меч" />
     <string id="bANXyotg" text="{.Muzcynski}Трохі Рабрыстая Флісса" />
     <string id="BAsjzOiH" text="{.Zanocy}Сякера Ката" />
     <string id="bcjcw1o9" text="{.Zanocy}Лясная Сякера-Калун" />
@@ -1034,7 +1034,7 @@
     <string id="h1jKICdp" text="{.Muzcynski}Просты Кароткі Лук" />
     <string id="h60wQVVX" text="{.Zanocy}Піка" />
     <string id="H9hzBJz3" text="{.Nijaki}Кап'ё для Практыцы" />
-    <string id="ha3rVEzP" text="{.Muzcynski}Рабрысты Змочаны Узброены Меч" />
+    <string id="ha3rVEzP" text="{.Muzcynski}Рабрысты Змочаны Збройны Меч" />
     <string id="habJjtmv" text="{.Muzcynski}Рабрысты Жалезны Шырокі Меч" />
     <string id="HaK3y9yi" text="{.Muzcynski}Шыпаты Дубец" />
     <string id="HclLXEaT" text="{.Zanocy}Конская Пуга" />
@@ -1080,7 +1080,7 @@
     <string id="kR1blV2k" text="{.Mnozny}Зазубраныя Ваярскія Вілы" />
     <string id="KRhIG1cw" text="{.Zanocy}Вялізарная Сякера-Францыска" />
     <string id="KRuZuMFI" text="{.Nijaki}Прысуд" />
-    <string id="ksxylfU4" text="{.Muzcynski}Рабрысты Узброены Меч" />
+    <string id="ksxylfU4" text="{.Muzcynski}Рабрысты Збройны Меч" />
     <string id="KTegaNPW" text="{.Muzcynski}Доўгі Лук" />
     <string id="ktJ6crBs" text="{.Muzcynski}Шырокі Фалькіан" />
     <string id="Kv4zAMIh" text="{.Zanocy}Булава Катафракта" />
@@ -1115,7 +1115,7 @@
     <string id="oQmUlQWp" text="{.Zanocy}Простая Шабля " />
     <string id="oV5AhcDl" text="{.Mnozny}Дротыкі з Нізінаў" />
     <string id="oXrbTRJo" text="{.Zanocy}Жнец" />
-    <string id="P9FUrH8a" text="{.Muzcynski}Залаты Гравераваны Узброены Меч" />
+    <string id="P9FUrH8a" text="{.Muzcynski}Залаты Гравераваны Збройны Меч" />
     <string id="P9PcIk4q" text="{.Zanocy}Крукаватая Сякера Вершніка" />
     <string id="PBLsXDgP" text="{.Zanocy}Лёгкая Булава" />
     <string id="pjvwuVuc" text="{.Zanocy}Аднаручная Асьцюкаватая Сякера" />
@@ -1164,7 +1164,7 @@
     <string id="UWvOndG0" text="{.Zanocy}Лёгкая Стэпавая Дзіда Наезьніка" />
     <string id="V4b2ZRTH" text="{.Zanocy}Ромфэя" />
     <string id="v7WQhge3" text="{.Zanocy}Упрыгожаная Шабля" />
-    <string id="VAcSEseI" text="{.Muzcynski}Шырокі Узброены Меч з Шырокім Долам" />
+    <string id="VAcSEseI" text="{.Muzcynski}Шырокі Збройны Меч з Шырокім Долам" />
     <string id="VAO11FSu" text="{.Muzcynski}Тамаскінскі Сталёвы Двухручнік" />
     <string id="vDvj5zkG" text="{.Zanocy}Лютасьць Ветру" />
     <string id="vmz4vfu5" text="{.Mnozny}Крукаватыя Дротыкі" />
@@ -1174,7 +1174,7 @@
     <string id="vXYlLH6L" text="{.Nijaki}Доўгае Тамаскінскае Змочанае Кап'ё" />
     <string id="Vyw5KNxR" text="{.Nijaki}Кароткае Кап'ё Рушэньня" />
     <string id="w6EU77OH" text="{.Muzcynski}Стэпавы Загнуты Назад Лук" />
-    <string id="w9RLq82l" text="{.Muzcynski}Жалезны Узброены Меч" />
+    <string id="w9RLq82l" text="{.Muzcynski}Жалезны Збройны Меч" />
     <string id="WASZXuec" text="{.Muzcynski}Пярнач Рушэньня" />
     <string id="wfhHGTbl" text="{.Muzcynski}Стэпавы Вайсковы Лук" />
     <string id="wi53b5PG" text="{.Mnozny}Цяжкія Балты" />
@@ -1206,13 +1206,13 @@
     <string id="Z6Ak3H6G" text="{.Muzcynski}Джарэйд" />
     <string id="zbsajPMp" text="{.Muzcynski}Вульж" />
     <string id="zBUT90xQ" text="{.Zanocy}Тамаскінская Сталёвая Каскара" />
-    <string id="Zcaucj4W" text="{.Zanocy}Упрыгожаная Узброены Меч" />
+    <string id="Zcaucj4W" text="{.Zanocy}Упрыгожаная Збройны Меч" />
     <string id="ZeU1fvdz" text="{.Zanocy}Груда Буйнай Карцечы" />
     <string id="ZFwKlHIJ" text="{.Muzcynski}Лясны Доўгі Лук" />
     <string id="zH0QF7mE" text="{.Nijaki}Гербавае Кап'ё з Выступам і Рушамі" />
     <string id="ZLpYFYXo" text="{.Nijaki}Зазубранае Выдатнае Сталёвае Кап'ё" />
     <string id="ZQv5Bcl2" text="{.Muzcynski}Лук Суродзіча" />
-    <string id="ZsaukY0N" text="{.Muzcynski}Узброены Меч з Кругам" />
+    <string id="ZsaukY0N" text="{.Muzcynski}Збройны Меч з Кругам" />
     <string id="zUFRE9y4" text="{.Zanocy}Кірка" />
     <string id="zvIax8Kt" text="{.Muzcynski}Кідальны Нож з Нізінаў" />
   </strings>
